Replace all Desc keys with DescEx, plus some fixes
All Desc keys were converted to DescEx keys with correctly formatted
REML.
Fixes were:
* Mispelled "Commants" key renamed as "Extra" and REML formatted.
* Duplicated "Extra" keys were merged into one.
Also added a link to an RFC to one DescEx value.

--- a/csdb/collection/date.ini
+++ b/csdb/collection/date.ini
@@ -29,7 +29,7 @@ Delphi10S=Y
 FPC=Y
 
 [AdjustedTimeZoneBias]
-Desc="Gets the bias of the local time zone relative to UTC (GMT), adjusted for daylight saving or standard time as appropriate."
+DescEx="<p>Gets the bias of the local time zone relative to UTC (GMT), adjusted for daylight saving or standard time as appropriate.</p>"
 Units=SysUtils,Windows
 SeeAlso=TimeZoneBias
 Snip=269.dat
@@ -52,7 +52,7 @@ Delphi10S=Y
 FPC=Y
 
 [DateDay]
-Desc="Extracts the day of the month from a specified date."
+DescEx="<p>Extracts the day of the month from a specified date.</p>"
 Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=DateMonth,DateYear,DayOfYear
@@ -77,7 +77,7 @@ Delphi10S=Y
 FPC=Y
 
 [DateMonth]
-Desc="Extracts the month from a specified date."
+DescEx="<p>Extracts the month from a specified date.</p>"
 Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=DateDay,DateYear,DaysInMonth,DateMonthEnd,DateMonthStart
@@ -101,7 +101,7 @@ Delphi10S=Y
 FPC=Y
 
 [DateMonthEnd]
-Desc="Returns the last day of the month containing the given date."
+DescEx="<p>Returns the last day of the month containing the given date.</p>"
 Extra="<p>The date returned is midnight at the beginning of the last day of the month.</p>"
 Units=SysUtils
 SeeAlso=DateMonth,DateMonthStart,DaysInMonth
@@ -127,7 +127,7 @@ Delphi10S=Y
 FPC=Y
 
 [DateMonthStart]
-Desc="Returns the first day of the month containing the given date."
+DescEx="<p>Returns the first day of the month containing the given date.</p>"
 Extra="<p>The date returned is midnight at the beginning of the first day of the month.</p><p>Slightly modified from code contributed by Bill Miller.</p>"
 Units="SysUtils"
 SeeAlso=DateMonth,DateMonthEnd
@@ -152,7 +152,7 @@ Delphi10S=Y
 FPC=Y
 
 [DateQuarter]
-Desc="Returns the number of the quarter containing a given date."
+DescEx="<p>Returns the number of the quarter containing a given date.</p>"
 Extra="<p>Based on code contributed by Homolibere.</p>"
 Units=SysUtils
 SeeAlso=DateQuarterStart,DateQuarterEnd
@@ -177,7 +177,7 @@ Delphi10S=Y
 FPC=Y
 
 [DateQuarterEnd]
-Desc="Gets the date of the last day of the quarter containing a given date."
+DescEx="<p>Gets the date of the last day of the quarter containing a given date.</p>"
 Extra="<p>Modified from code contributed by Homolibere.</p>"
 Units=SysUtils
 SeeAlso=DateQuarter,DateQuarterStart
@@ -202,7 +202,7 @@ Delphi10S=Y
 FPC=Y
 
 [DateQuarterStart]
-Desc="Gets the date of the first day of the quarter containing a given date."
+DescEx="<p>Gets the date of the first day of the quarter containing a given date.</p>"
 Extra="<p>Modified from code contributed by Homolibere.</p>"
 Units=SysUtils
 SeeAlso=DateQuarter,DateQuarterEnd
@@ -272,7 +272,7 @@ Delphi10S=Y
 FPC=Y
 
 [DateYear]
-Desc="Extracts the year from a specified date."
+DescEx="<p>Extracts the year from a specified date.</p>"
 Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=DateDay,DateMonth,IsLeapYear,DateYearStart,DateYearEnd
@@ -296,7 +296,7 @@ Delphi10S=Y
 FPC=Y
 
 [DateYearEnd]
-Desc="Returns the last day of the year containing the specified date."
+DescEx="<p>Returns the last day of the year containing the specified date.</p>"
 Extra="<p>The date returned is midnight at the beginning of the last day of the year.</p><p>Renamed routine from Bill Miller's snippets collection.</p>"
 Units=SysUtils
 SeeAlso=DateYear,DateYearStart
@@ -321,7 +321,7 @@ Delphi10S=Y
 FPC=Y
 
 [DateYearStart]
-Desc="Returns the first day of the year containing the specified date."
+DescEx="<p>Returns the first day of the year containing the specified date.</p>"
 Extra="<p>The date returned is midnight at the beginning of the first day of the year.</p><p>Renamed from routine contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=DateYear,DateYearEnd
@@ -346,7 +346,7 @@ Delphi10S=Y
 FPC=Y
 
 [DayOfYear]
-Desc="Returns the day of the year for the given date."
+DescEx="<p>Returns the day of the year for the given date.</p>"
 Extra="<p>From Bill Miller's snippets collection.</p>"
 Depends=DateYearStart
 SeeAlso=DateDay
@@ -370,7 +370,7 @@ Delphi10S=Y
 FPC=Y
 
 [DaysInMonth]
-Desc="Gets number of days in month specified by a given date. Allows for leap days."
+DescEx="<p>Gets number of days in month specified by a given date. Allows for leap days.</p>"
 Units=SysUtils
 Depends=DateMonth,IsLeapYear
 SeeAlso=DateDay,IsLeapYear
@@ -394,7 +394,7 @@ Delphi10S=Y
 FPC=Y
 
 [DiffDays]
-Desc="Returns the whole number of days separating two given dates."
+DescEx="<p>Returns the whole number of days separating two given dates.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=AddDays
 Snip=549.dat
@@ -417,7 +417,7 @@ Delphi10S=Y
 FPC=Y
 
 [Is24HourTimeFormat]
-Desc="Checks if the 24 hour time format is being used by the current thread."
+DescEx="<p>Checks if the 24 hour time format is being used by the current thread.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 Units=SysUtils,Windows
 Snip=229.dat
@@ -440,7 +440,7 @@ Delphi10S=Y
 FPC=N
 
 [IsDaylightSaving]
-Desc="Checks if current local time is daylight saving time."
+DescEx="<p>Checks if current local time is daylight saving time.</p>"
 Extra="<p>Raises exception if daylight saving information cannot be obtained from operating system.</p>"
 Units=SysUtils,Windows
 Snip=230.dat
@@ -463,7 +463,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsFriday]
-Desc="Checks if the given date is a Friday."
+DescEx="<p>Checks if the given date is a Friday.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsTuesday,IsWednesday,IsThursday,IsSaturday,IsSunday,IsWeekday,IsWeekend
 Units=SysUtils
@@ -487,7 +487,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsLeapYear]
-Desc="Checks if a specified date falls in a leap year."
+DescEx="<p>Checks if a specified date falls in a leap year.</p>"
 Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Depends=DateYear
 SeeAlso=DateYear,DaysInMonth
@@ -511,7 +511,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsMonday]
-Desc="Checks if the given date is a Monday."
+DescEx="<p>Checks if the given date is a Monday.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsTuesday,IsWednesday,IsThursday,IsFriday,IsSaturday,IsSunday,IsWeekday,IsWeekend
 Units=SysUtils
@@ -535,7 +535,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsSaturday]
-Desc="Checks if the given date is a Saturday."
+DescEx="<p>Checks if the given date is a Saturday.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsTuesday,IsWednesday,IsThursday,IsFriday,IsSunday,IsWeekday,IsWeekend
 Units=SysUtils
@@ -559,7 +559,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsSunday]
-Desc="Checks if the given date is a Sunday."
+DescEx="<p>Checks if the given date is a Sunday.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsTuesday,IsWednesday,IsThursday,IsFriday,IsSaturday,IsWeekday,IsWeekend
 Units=SysUtils
@@ -583,7 +583,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsThursday]
-Desc="Checks if the given date is a Thursday."
+DescEx="<p>Checks if the given date is a Thursday.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsTuesday,IsWednesday,IsFriday,IsSaturday,IsSunday,IsWeekday,IsWeekend
 Units=SysUtils
@@ -607,7 +607,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsTuesday]
-Desc="Checks if the given date is a Tuesday."
+DescEx="<p>Checks if the given date is a Tuesday.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsWednesday,IsThursday,IsFriday,IsSaturday,IsSunday,IsWeekday,IsWeekend
 Units=SysUtils
@@ -631,7 +631,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsValidDate]
-Desc="Checks if a string represents a valid date in the current locale."
+DescEx="<p>Checks if a string represents a valid date in the current locale.</p>"
 Extra="<p>Inspired by code from Bill Miller's snippets collection.</p>"
 Units=SysUtils
 SeeAlso=IsValidTime
@@ -655,7 +655,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsValidTime]
-Desc="Checks if a string represents a valid time in the current locale."
+DescEx="<p>Checks if a string represents a valid time in the current locale.</p>"
 Extra="<p>Inspired by code from Bill Miller's snippets collection.</p>"
 Units=SysUtils
 SeeAlso=IsValidDate
@@ -679,7 +679,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsWednesday]
-Desc="Checks if the given date is a Wednesday."
+DescEx="<p>Checks if the given date is a Wednesday.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsTuesday,IsThursday,IsFriday,IsSaturday,IsSunday,IsWeekday,IsWeekend
 Units=SysUtils
@@ -703,7 +703,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsWeekday]
-Desc="Checks if the given date is a weekday."
+DescEx="<p>Checks if the given date is a weekday.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsTuesday,IsWednesday,IsThursday,IsFriday,IsSaturday,IsSunday,IsWeekend
 Units=SysUtils
@@ -727,7 +727,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsWeekend]
-Desc="Checks if the given date is a weekend."
+DescEx="<p>Checks if the given date is a weekend.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsTuesday,IsWednesday,IsThursday,IsFriday,IsSaturday,IsSunday,IsWeekday
 Units=SysUtils
@@ -773,7 +773,7 @@ Delphi10S=Y
 FPC=Y
 
 [SQLDate]
-Desc="Formats a date in SQL format."
+DescEx="<p>Formats a date in SQL format.</p>"
 Units=SysUtils
 SeeAlso=SQLDateToDateTime
 TestInfo=advanced
@@ -822,7 +822,7 @@ Delphi10S=Y
 FPC=Y
 
 [TimeHour]
-Desc="Extracts the hour from a specified time."
+DescEx="<p>Extracts the hour from a specified time.</p>"
 Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=TimeMin,TimeSec
@@ -846,7 +846,7 @@ Delphi10S=Y
 FPC=Y
 
 [TimeMin]
-Desc="Extracts the minute from a specified time."
+DescEx="<p>Extracts the minute from a specified time.</p>"
 Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=TimeHour,TimeSec
@@ -870,7 +870,7 @@ Delphi10S=Y
 FPC=Y
 
 [TimeSec]
-Desc="Extracts the second from a specified time."
+DescEx="<p>Extracts the second from a specified time.</p>"
 Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=TimeHour,TimeMin
@@ -918,7 +918,7 @@ Delphi10S=Y
 FPC=Y
 
 [TimeZoneName]
-Desc="Returns a string containing the local time zone name or '' if the name is unknown."
+DescEx="<p>Returns a string containing the local time zone name or '' if the name is unknown.</p>"
 Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils,Windows
 SeeAlso=TimeZoneBias
@@ -1058,7 +1058,7 @@ Delphi10S=Y
 FPC=Y
 
 [LongDayName]
-Desc="Gets the long name of the day specified by a date."
+DescEx="<p>Gets the long name of the day specified by a date.</p>"
 Extra="<p>Users of Delphi XE &amp; later or Free Pascal 2.6.0 &amp; later should use <var>LongDayNameXE</var> instead of this routine.</p><p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=ShortDayName,LongMonthName,LongDayNameXE
@@ -1086,7 +1086,7 @@ Delphi10S=N
 FPC=Y
 
 [LongDayNameXE]
-Desc="Gets the long name of the day specified by a date."
+DescEx="<p>Gets the long name of the day specified by a date.</p>"
 Extra="<p>This is a version of <var>LongDayName</var> suitable for use with Delphi XE &amp; later or Free Pascal 2.6.0 &amp; later. For Delphi 2010 and earlier, use <var>LongDayName</var> instead.</p><p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=ShortDayNameXE,LongMonthNameXE,LongDayName
@@ -1110,7 +1110,7 @@ Delphi10S=Y
 FPC=Y
 
 [LongMonthName]
-Desc="Gets the long name of the month specified by a date."
+DescEx="<p>Gets the long name of the month specified by a date.</p>"
 Extra="<p>Users of Delphi XE &amp; later or Free Pascal 2.6.0 &amp; later should use <var>LongMonthNameXE</var> instead of this routine.</p><p>Amalgam of code contributed by both Bill Miller and Peter Johnson.</p>"
 Units=SysUtils
 Depends=DateMonth
@@ -1139,7 +1139,7 @@ Delphi10S=N
 FPC=Y
 
 [LongMonthNameXE]
-Desc="Gets the long name of the month specified by a date."
+DescEx="<p>Gets the long name of the month specified by a date.</p>"
 Extra="<p>This is a version of <var>LongMonthName</var> suitable for use with Delphi XE &amp; later or Free Pascal 2.6.0 &amp; later. For Delphi 2010 and earlier, use <var>LongMonthName</var> instead.</p><p>Amalgam of code contributed by both Bill Miller and Peter Johnson.</p>"
 Units=SysUtils
 Depends=DateMonth
@@ -1164,7 +1164,7 @@ Delphi10S=Y
 FPC=Y
 
 [MinsToStr]
-Desc="Converts the given number of minutes to a formatted days / hours / minutes string."
+DescEx="<p>Converts the given number of minutes to a formatted days / hours / minutes string.</p>"
 Extra="<p>Modified from code contributed by &quot;michael&quot;.</p>"
 Units=SysUtils
 Snip=632.dat
@@ -1183,7 +1183,7 @@ Delphi10S=Y
 FPC=Y
 
 [NowGMT]
-Desc="Returns the current date and time converted to UTC/GMT."
+DescEx="<p>Returns the current date and time converted to UTC/GMT.</p>"
 Units=SysUtils,Windows
 SeeAlso=GMTToLocalTime
 Snip=628.dat
@@ -1201,7 +1201,7 @@ Delphi10S=Y
 FPC=Y
 
 [RFC1123DateGMT]
-Desc="Returns the given date time value, which must be in GMT/UTC, as a RFC1123 formatted string."
+DescEx="<p>Returns the given date time value, which must be in GMT/UTC, as a RFC1123 formatted string.</p>"
 Units=SysUtils
 SeeAlso=NowGMT
 TestInfo=advanced
@@ -1271,7 +1271,7 @@ Delphi10S=Y
 FPC=Y
 
 [ShortDayName]
-Desc="Gets the short name of the day specified by a date."
+DescEx="<p>Gets the short name of the day specified by a date.</p>"
 Extra="<p>Users of Delphi XE &amp; later or Free Pascal 2.6.0 &amp; later should use <var>ShortDayNameXE</var> instead of this routine.</p><p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=LongDayName,ShortMonthName,ShortDayNameXE
@@ -1299,7 +1299,7 @@ Delphi10S=N
 FPC=Y
 
 [ShortDayNameXE]
-Desc="Gets the short name of the day specified by a date."
+DescEx="<p>Gets the short name of the day specified by a date.</p>"
 Extra="<p>This is a version of <var>ShortDayName</var> suitable for use with Delphi XE &amp; later or Free Pascal 2.6.0 &amp; later. For Delphi 2010 and earlier, use <var>ShortDayName</var> instead.</p><p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=LongDayNameXE,ShortMonthNameXE,ShortDayName
@@ -1323,7 +1323,7 @@ Delphi10S=Y
 FPC=Y
 
 [ShortMonthName]
-Desc="Gets the short name of the month specified by a date."
+DescEx="<p>Gets the short name of the month specified by a date.</p>"
 Extra="<p>Users of Delphi XE &amp; later or Free Pascal 2.6.0 &amp; later should use <var>ShortMonthNameXE</var> instead of this routine.</p><p>Amalgam of code contributed by both Bill Miller and Peter Johnson.</p>"
 Units=SysUtils
 Depends=DateMonth
@@ -1352,7 +1352,7 @@ Delphi10S=N
 FPC=Y
 
 [ShortMonthNameXE]
-Desc="Gets the short name of the month specified by a date."
+DescEx="<p>Gets the short name of the month specified by a date.</p>"
 Extra="<p>This is a version of <var>ShortMonthName</var> suitable for use with Delphi XE &amp; later or Free Pascal 2.6.0 &amp; later. For Delphi 2010 and earlier, use <var>ShortMonthName</var> instead.</p><p>Amalgam of code contributed by both Bill Miller and Peter Johnson.</p>"
 Units=SysUtils
 Depends=DateMonth
@@ -1377,7 +1377,7 @@ Delphi10S=Y
 FPC=Y
 
 [WesternEaster]
-Desc="Returns the date of Easter Sunday for the given year in the Gregorian calendar as used by Western Christian Churches."
+DescEx="<p>Returns the date of Easter Sunday for the given year in the Gregorian calendar as used by Western Christian Churches.</p>"
 Extra="<p>This routine is derived from a snippet taken from the SWAG Archive. That snippet was converted to Pascal by Kerry Sokalsky from Modula-2 code written by Greg Vigneault in 1993.</p><p>The algorithm was taken from chapter 4 of &quot;Astronomical Formulae for Calculators&quot; 2nd edition; by Jean Meeus; publisher: Willmann-Bell Inc., ISBN 0-943396-01-8.</p><p>The algorithm is valid for all years in the Gregorian calendar, i.e. from 1583 onwards. The extreme dates of Easter are March 22 (as in 1818 and 2285) and April 25 (as in 1886, 1943, 2038).</p><p>For more details of the algorithm see <a href="http://en.wikipedia.org/wiki/Computus#Anonymous_Gregorian_algorithm">this article</a> on Wikipedia.</p>"
 Units=SysUtils
 TestInfo=advanced
