--- a/csdb/collection/file.ini
+++ b/csdb/collection/file.ini
@@ -54,7 +54,7 @@ Delphi10S=Y
 FPC=Y
 
 [CreateURLShortcut]
-Desc="Creates a URL shortcut file with the given name for the given URL, overwriting any existing file. An exception is raised if file can't be created."
+DescEx="<p>Creates a URL shortcut file with the given name for the given URL, overwriting any existing file. An exception is raised if file can't be created.</p>"
 SeeAlso=IsURLShortcut,URLFromShortcut
 Snip=005.dat
 Delphi2=Y
@@ -76,7 +76,7 @@ Delphi10S=Y
 FPC=Y
 
 [DefaultFileExt]
-Desc="Adds a default extension to a file name if it has no extension but leaves the file name unchanged if it has an extension."
+DescEx="<p>Adds a default extension to a file name if it has no extension but leaves the file name unchanged if it has an extension.</p>"
 Depends=ForceFileExt,HasFileExt
 SeeAlso=ForceFileExt,HasFileExt,RemoveFileExt
 Snip=398.dat
@@ -123,7 +123,7 @@ Delphi10S=Y
 FPC=Y
 
 [DeleteFilesWithUndo]
-Desc="Deletes a list of files and sends them all to the recycle bin. Returns True if the files were deleted successfully and False if the function fails."
+DescEx="<p>Deletes a list of files and sends them all to the recycle bin. Returns True if the files were deleted successfully and False if the function fails.</p>"
 Extra="<p>If any of the listed files don't exist none will be deleted and the function will fail.</p>"
 Units=Classes,ShellAPI
 Depends=StringsToMultiSz
@@ -148,7 +148,7 @@ Delphi10S=Y
 FPC=Y
 
 [DeleteFileWithUndo]
-Desc="Deletes given file and sends it to recycle bin. Returns true if file deleted successfully."
+DescEx="<p>Deletes given file and sends it to recycle bin. Returns true if file deleted successfully.</p>"
 Units=ShellAPI
 SeeAlso=EmptyRecycleBin,DeleteFiles,DeleteFilesWithUndo
 Snip=006.dat
@@ -171,7 +171,7 @@ Delphi10S=Y
 FPC=Y
 
 [DirToPath]
-Desc="Returns the given directory with a trailing backslash. If the directory already ends in backslash it is returned unchanged."
+DescEx="<p>Returns the given directory with a trailing backslash. If the directory already ends in backslash it is returned unchanged.</p>"
 SeeAlso=PathToDir
 Snip=030.dat
 Delphi2=Y
@@ -193,7 +193,7 @@ Delphi10S=Y
 FPC=Y
 
 [DOSToUnixPath]
-Desc=Converts a DOS path to a Unix path and returns it.
+DescEx="<p>Converts a DOS path to a Unix path and returns it.</p>"
 Units=SysUtils
 Snip=008.dat
 Delphi2=N
@@ -215,7 +215,7 @@ Delphi10S=Y
 FPC=Y
 
 [EnsureFolders]
-Desc=Ensures that the given folder and all folders on its path exist, and creates them if they do not.
+DescEx="<p>Ensures that the given folder and all folders on its path exist, and creates them if they do not.</p>"
 Units=SysUtils
 Depends=PathToDir,IsDirectory
 SeeAlso=ListFiles
@@ -239,7 +239,7 @@ Delphi10S=Y
 FPC=Y
 
 [FileSizeString]
-Desc="Returns the size of a file as a formatted string. For files larger than 1Kb the size is approximate. If the file size can't be read then the empty string is returned."
+DescEx="<p>Returns the size of a file as a formatted string. For files larger than 1Kb the size is approximate.</p><p>If the file size can't be read then the empty string is returned.</p>"
 Extra="<p>Modification of code contributed by Michael Rockett.</p>"
 Units=SysUtils
 Depends=SizeOfFile64
@@ -263,7 +263,7 @@ Delphi10S=Y
 FPC=Y
 
 [ForceFileExt]
-Desc="Forces a file name to have a specified extension. If the given extension is the empty string then any existing extension is removed."
+DescEx="<p>Forces a file name to have a specified extension.</p><p>If the given extension is the empty string then any existing extension is removed.</p>"
 Depends=RemoveFileExt
 SeeAlso=DefaultFileExt,HasFileExt,RemoveFileExt
 Snip=399.dat
@@ -286,7 +286,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetFileDate]
-Desc=Returns modification date of given file encoded as integer.
+DescEx="<p>Returns modification date of given file encoded as integer.</p>"
 Units=SysUtils
 SeeAlso=SetFileDate
 Snip=009.dat
@@ -332,7 +332,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetLastDirectory]
-Desc="Returns the last directory in a specified path or the empty string if the given path is not a directory."
+DescEx="<p>Returns the last directory in a specified path or the empty string if the given path is not a directory.</p>"
 Extra="<p>Modified from code contributed by Bill Miller.</p>"
 Units=SysUtils
 Depends=IsDirectory,PathToDir
@@ -356,7 +356,7 @@ Delphi10S=Y
 FPC=Y
 
 [HasFileExt]
-Desc="Determines if a file name has an extension. A file name ending in '.' is deemed to have an empty extension."
+DescEx="<p>Determines if a file name has an extension. A file name ending in '.' is deemed to have an empty extension.</p>"
 Units=SysUtils
 SeeAlso=DefaultFileExt,ForceFileExt,RemoveFileExt
 Snip=400.dat
@@ -379,7 +379,7 @@ Delphi10S=Y
 FPC=Y
 
 [HasVerInfo]
-Desc=Returns true if the given file contains version information and false if not.
+DescEx="<p>Returns true if the given file contains version information and false if not.</p>"
 Units=Windows
 SeeAlso=GetFixedFileVerInfo
 Snip=036.dat
@@ -402,7 +402,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsArchiveFile]
-Desc="Checks if a file's archive attribute is set."
+DescEx="<p>Checks if a file's archive attribute is set.</p>"
 Units=SysUtils
 Depends=IsFlagSet
 SeeAlso=IsDirectory,IsFile,IsHiddenFile,IsReadOnlyFile,IsSystemFile
@@ -426,7 +426,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsFile]
-Desc="Determines if the provided path specifies a file."
+DescEx="<p>Determines if the provided path specifies a file.</p>"
 Units=SysUtils
 Depends=IsFlagSet
 SeeAlso=IsArchiveFile,IsDirectory,IsHiddenFile,IsReadOnlyFile,IsSystemFile
@@ -450,7 +450,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsHiddenFile]
-Desc="Checks if a file's hidden attribute is set."
+DescEx="<p>Checks if a file's hidden attribute is set.</p>"
 Units=SysUtils
 Depends=IsFlagSet
 SeeAlso=IsArchiveFile,IsDirectory,IsFile,IsReadOnlyFile,IsSystemFile
@@ -474,7 +474,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsReadOnlyFile]
-Desc="Checks if a file's read-only attribute is set."
+DescEx="<p>Checks if a file's read-only attribute is set.</p>"
 Units=SysUtils
 Depends=IsFlagSet
 SeeAlso=IsArchiveFile,IsDirectory,IsFile,IsHiddenFile,IsSystemFile
@@ -498,7 +498,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsSystemFile]
-Desc="Checks if a file's system attribute is set."
+DescEx="<p>Checks if a file's system attribute is set.</p>"
 Units=SysUtils
 Depends=IsFlagSet
 SeeAlso=IsArchiveFile,IsDirectory,IsFile,IsHiddenFile,IsReadOnlyFile
@@ -522,7 +522,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsURLShortcut]
-Desc=Returns true if the given file is a URL shortcut file and false if not.
+DescEx="<p>Returns true if the given file is a URL shortcut file and false if not.</p>"
 Units=SysUtils,IniFiles
 SeeAlso=CreateURLShortcut,URLFromShortcut
 Snip=048.dat
@@ -545,7 +545,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsValidFileName]
-Desc="Tests if a file name is a valid on Windows file systems."
+DescEx="<p>Tests if a file name is a valid on Windows file systems.</p>"
 Extra="<p>Based on information contained in the <a href="http://msdn.microsoft.com/en-us/library/aa365247.aspx">File Names, Paths and Namespaces</a> topic on the Microsoft Developer Network.</p>"
 Units=SysUtils
 Depends=SizeOfFile64
@@ -593,7 +593,7 @@ Delphi10S=Y
 FPC=Y
 
 [LongToShortFilePath]
-Desc="Converts the given long file name to the equivalent shortened DOS style 8.3 path."
+DescEx="<p>Converts the given long file name to the equivalent shortened DOS style 8.3 path.</p>"
 Units=Windows
 SeeAlso=ShortToLongFilePath
 Snip=074.dat
@@ -616,7 +616,7 @@ Delphi10S=Y
 FPC=Y
 
 [PathIsRoot]
-Desc="Checks if the given path is a root directory."
+DescEx="<p>Checks if the given path is a root directory.</p>"
 Extra="<p>Works with UNC paths and paths with drive specifiers.</p><p>Slightly modified from code created by Steve Moss, CoCo Systems Ltd. Contributed by Bill Miller.</p>"
 Units=SysUtils
 Depends=DirToPath
@@ -640,7 +640,7 @@ Delphi10S=Y
 FPC=Y
 
 [PathToDir]
-Desc=Returns the given directory with any single trailing backslash removed. If the directory does not end in a backslash it is returned unchanged.
+DescEx="<p>Returns the given directory with any single trailing backslash removed.</p><p>If the directory does not end in a backslash it is returned unchanged.</p>"
 SeeAlso=DirToPath
 Snip=056.dat
 Delphi2=Y
@@ -662,7 +662,7 @@ Delphi10S=Y
 FPC=Y
 
 [RemoveFileExt]
-Desc="Removes the extension from a file name. File name is unchanged if it has no extension."
+DescEx="<p>Removes the extension from a file name. File name is unchanged if it has no extension.</p>"
 SeeAlso=DefaultFileExt,ForceFileExt,HasFileExt
 Units=SysUtils
 Snip=122.dat
@@ -685,7 +685,7 @@ Delphi10S=Y
 FPC=Y
 
 [SetFileDate]
-Desc=Sets modification date of given file to given integer coded value. Returns True on success and False on failure.
+DescEx="<p>Sets modification date of given file to given integer coded value. Returns True on success and False on failure.</p>"
 Units=SysUtils
 SeeAlso=GetFileDate
 Snip=011.dat
@@ -708,7 +708,7 @@ Delphi10S=Y
 FPC=Y
 
 [SizeOfFile64]
-Desc="Gets the size of a file.  Returns -1 if the file doesn't exist or can't be accessed."
+DescEx="<p>Gets the size of a file.</p><p>Returns -1 if the file doesn't exist or can't be accessed.</p>"
 Extra="<p>Works with files larger than 2Gb.</p>"
 Units=SysUtils,Windows
 SeeAlso=SizeOfFile
@@ -732,7 +732,7 @@ Delphi10S=Y
 FPC=Y
 
 [Touch]
-Desc=Sets modification date of given file to current date and time. Returns True if date set successfully or false on error.
+DescEx="<p>Sets modification date of given file to current date and time. Returns True if date set successfully or false on error.</p>"
 Units=SysUtils
 Snip=037.dat
 Delphi2=Y
@@ -754,7 +754,7 @@ Delphi10S=Y
 FPC=Y
 
 [URLFromShortcut]
-Desc="Returns the URL referenced by the given URL shortcut file, or the empty string if the given file is not a shortcut file."
+DescEx="<p>Returns the URL referenced by the given URL shortcut file, or the empty string if the given file is not a shortcut file.</p>"
 Extra="<p>Derived from a similar function published on <a href="http://www.torry.net/">Torry's Delphi Pages</a>.</p>"
 Units=IniFiles
 SeeAlso=CreateURLShortcut,IsURLShortcut
@@ -802,7 +802,7 @@ Delphi10S=Y
 FPC=Y
 
 [DirPurge]
-Desc="Deletes the given directory and all its files and sub-directories. If the directory does not exist then the routine returns immediately."
+DescEx="<p>Deletes the given directory and all its files and sub-directories. If the directory does not exist then the routine returns immediately.</p>"
 Units=SysUtils
 Snip=563.dat
 Delphi2=N
@@ -872,7 +872,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetParentDirectory]
-Desc="Returns the parent directory of the provided path."
+DescEx="<p>Returns the parent directory of the provided path.</p>"
 Extra="<p>Modification of code from Bill Miller's snippets collection.</p> <p>If <var>APath</var> is relative then the returned directory is relative to the current directory.</p>"
 Units=SysUtils
 Depends=DirToPath
@@ -921,7 +921,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsFolderEmpty]
-Desc="Determines if a folder is empty. Returns True if so, False otherwise."
+DescEx="<p>Determines if a folder is empty. Returns True if so, False otherwise.</p>"
 Extra="<p>Contributed by Bill Miller, with added error handling.</p> <p><var>AFolder</var> must be a valid directory. It can optionally have a trailing path delimiter.</p>"
 Units=SysUtils,Windows
 Depends=DirToPath,IsDirectory,PathToDir
@@ -946,7 +946,7 @@ Delphi10S=Y
 FPC=N
 
 [IsHugeFile]
-Desc="Checks if a file is huge, i.e. it is larger than 2Gb."
+DescEx="<p>Checks if a file is huge, i.e. it is larger than 2Gb.</p>"
 Extra="<p>Use this function to determine if you can rely upon the <var>SizeOfFile</var> function to test the size of a file or if <var>SizeOfFile64</var> must be used. <var>SizeOfFile</var> can only be used if <var>IsHugeFile</var> returns false.</p>"
 Depends=SizeOfFile64
 SeeAlso=SizeOfFile,SizeOfFile64
@@ -970,7 +970,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsReservedDeviceName]
-Desc="Checks if a name is a Windows reserved device name."
+DescEx="<p>Checks if a name is a Windows reserved device name.</p>"
 Extra="<p>List of reserved names taken from the <a href="http://msdn.microsoft.com/en-us/library/aa365247.aspx">File Names, Paths and Namespaces</a> topic on the Microsoft Developer Network.</p> <p><strong>Note:</strong> Microsoft state that you should not use any of these reserved names as the name of a file. They also observe that reserved device names followed by an extension should be avoided, for example <mono>NUL.txt</mono>. To check for this use <var>IsReservedDeviceName(RemoveFileExt(ExtractFileName(FileName)));</var>.</p>"
 Units=SysUtils
 Snip=261.dat
@@ -993,7 +993,7 @@ Delphi10S=Y
 FPC=Y
 
 [ShortToLongFilePath]
-Desc="Converts whole of given DOS style 8.3 path to long file path and returns it. If path can't be converted then '' is returned."
+DescEx="<p>Converts whole of given DOS style 8.3 path to long file path and returns it.</p><p>If path can't be converted then '' is returned.</p>"
 Extra="<p>Function can handle UNC paths (<mono>\\server\share\path</mono> format) or local paths (<mono>X:\path format</mono>).</p>"
 Units=SysUtils
 SeeAlso=LongToShortFilePath
@@ -1017,7 +1017,7 @@ Delphi10S=Y
 FPC=Y
 
 [SizeOfFile]
-Desc="Gets the size of a file. Returns $FFFFFFFF if the file doesn't exist or can't be accessed or 2^31 if file is larger than 2Gb."
+DescEx="<p>Gets the size of a file.</p><p>Returns $FFFFFFFF if the file doesn't exist or can't be accessed or 2^31 if file is larger than 2Gb.</p>"
 Extra="<p>For files larger than 2Gb use <var>SizeOfFile64</var>.</p>"
 Units=SysUtils,Windows
 SeeAlso=SizeOfFile64,SizeOfFile2
@@ -1041,7 +1041,7 @@ Delphi10S=Y
 FPC=Y
 
 [SizeOfFile2]
-Desc="Gets the size of a file. Returns 0 if the file doesn't exist or can't be accessed."
+DescEx="<p>Gets the size of a file.</p><p>Returns 0 if the file doesn't exist or can't be accessed.</p>"
 Extra="<p>The file must be less that 2Gb in size. For files larger than 2Gb use <var>SizeOfFile64</var>.</p><p>Contributed by Montor.</p>"
 Units=SysUtils
 SeeAlso=SizeOfFile,SizeOfFile64
@@ -1137,7 +1137,7 @@ FPC=Y
 
 [TExeType]
 Kind=type
-Desc="Enumeration that describes various types of executable file."
+DescEx="<p>Enumeration that describes various types of executable file.</p>"
 Extra="<p><var>TExeType</var> is the return type of the <var>ExeType</var> function.</p>"
 SeeAlso=ExeType
 Snip=244.dat
