--- a/csdb/collection/graphics.ini
+++ b/csdb/collection/graphics.ini
@@ -78,7 +78,7 @@ Delphi10S=Y
 FPC=N
 
 [CloneCursorAsIcon]
-Desc="Creates and returns an icon object that contains a copy of the given cursor."
+DescEx="<p>Creates and returns an icon object that contains a copy of the given cursor.</p>"
 Extra="<strong>Note:</strong> The caller is responsible for freeing the icon created by this function."
 Units=Controls,Graphics,Forms
 Depends=CloneCursorHandleAsIcon
@@ -128,7 +128,7 @@ Delphi10S=Y
 FPC=N
 
 [CloneCursorHandleAsIcon]
-Desc="Creates and returns an icon object that contains a copy of the cursor with the given handle."
+DescEx="<p>Creates and returns an icon object that contains a copy of the cursor with the given handle.</p>"
 Extra="<strong>Note:</strong> The caller is responsible for freeing the icon created by this function."
 Units=Windows,Graphics
 SeeAlso=CloneCursorAsBitmap,CloneCursorAsIcon,CloneCursorHandleAsBitmap,CursorHandleToBitmap,CursorToBitmap
@@ -177,7 +177,7 @@ Delphi10S=Y
 FPC=N
 
 [CloneJPEGAsBitmap]
-Desc="Creates and returns a bitmap object that contains a copy of the given JPEG image."
+DescEx="<p>Creates and returns a bitmap object that contains a copy of the given JPEG image.</p>"
 Extra="<strong>Note:</strong> The caller is responsible for freeing the bitmap created by this function."
 Units=Graphics,JPEG
 SeeAlso=JPEGFileToBitmapFile,CloneGraphicAsBitmap
@@ -226,7 +226,7 @@ Delphi10S=Y
 FPC=N
 
 [ContrastingColor]
-Desc="Returns a colour that contrasts well with a given background colour. The returned colour is either black or white."
+DescEx="<p>Returns a colour that contrasts well with a given background colour. The returned colour is either black or white.</p>"
 Extra="<p>System colours are converted into actual colours before the foreground colour is calculated.</p><p>Adapted from code by Andreas Filsinger.</p>"
 Units=Windows,Graphics
 Depends=ColorToRGBTriple
@@ -416,7 +416,7 @@ Delphi10S=Y
 FPC=N
 
 [FontExists]
-Desc="Checks if a named font exists on the sytem."
+DescEx="<p>Checks if a named font exists on the sytem.</p>"
 Units=Forms
 Snip=340.dat
 Delphi2=Y
@@ -507,7 +507,7 @@ Delphi10S=Y
 FPC=N
 
 [IndexOfWidestString]
-Desc="Returns index of longest string in a string list when rendered in a given font. Returns -1 if string list is empty."
+DescEx="<p>Returns index of longest string in a string list when rendered in a given font. Returns -1 if string list is empty.</p>"
 Units=Classes,Graphics,Windows
 Depends=CreateDisplayDC
 SeeAlso=MaxWidthOfStrings,StringExtent
@@ -531,7 +531,7 @@ Delphi10S=Y
 FPC=N
 
 [IsColorIcon]
-Desc="Checks if given icon is colour or monochrome. Returns True if icon is in colour, False if monochrome."
+DescEx="<p>Checks if given icon is colour or monochrome. Returns True if icon is in colour, False if monochrome.</p>"
 Units=Graphics,Windows,SysUtils
 SeeAlso=IsCursorIcon,GetIconHotspot,GetIconANDBitmask,GetIconXORBitmask
 Snip=115.dat
@@ -554,7 +554,7 @@ Delphi10S=Y
 FPC=N
 
 [IsEqualRGBTriple]
-Desc="Checks if two RGB triple values are the same."
+DescEx="<p>Checks if two RGB triple values are the same.</p>"
 Units=Windows
 SeeAlso=ColorToRGBTriple,RGBTripleToColor
 Snip=111.dat
@@ -577,7 +577,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsGDIPlusInstalled]
-Desc="Checks if the GDI+ library is installed."
+DescEx="<p>Checks if the GDI+ library is installed.</p>"
 Depends=IsLibraryInstalled
 Snip=119.dat
 Delphi2=N
@@ -646,7 +646,7 @@ Delphi10S=Y
 FPC=N
 
 [MaxWidthOfStrings]
-Desc="Returns width of longest string in a string list when rendered in a given font."
+DescEx="<p>Returns width of longest string in a string list when rendered in a given font.</p>"
 Extra="<p>Closely based code by Peter Below published by the Delphi Pool.</p>"
 Units=Classes,Graphics,Windows
 Depends=CreateDisplayDC
@@ -791,7 +791,7 @@ Delphi10S=Y
 FPC=N
 
 [StringExtent]
-Desc="Returns the width and height of the given string when rendered in the specified font."
+DescEx="<p>Returns the width and height of the given string when rendered in the specified font.</p>"
 Extra="<p>Inspired by code by Peter Below published by the Delphi Pool.</p>"
 Units=Windows,Graphics
 Depends=CreateDisplayDC
@@ -966,7 +966,7 @@ Delphi10S=Y
 FPC=N
 
 [CreateDisplayDC]
-Desc="Creates and returns a display device context."
+DescEx="<p>Creates and returns a display device context.</p>"
 Extra="<p>The device context must be deleted using Windows' <var>DeleteDC</var> function.</p>"
 Units=Windows
 Snip=147.dat
@@ -989,7 +989,7 @@ Delphi10S=Y
 FPC=Y
 
 [DarkenColor]
-Desc="Darkens the given colour by the given percentage and returns the resulting colour."
+DescEx="<p>Darkens the given colour by the given percentage and returns the resulting colour.</p>"
 Extra="<p>Darkening a colour by 0% does not change it. Darkening by 100% or more makes the colour black.</p><p>System colours are converted to the actual colour they represent before darkening.</p><p>Inspired by code contributed by Topellina.</p>"
 Units=Windows,Graphics
 Depends=Clamp,ExtractRGB
@@ -1014,7 +1014,7 @@ Delphi10S=Y
 FPC=N
 
 [GetBMPSize]
-Desc="Gets the dimensions of a bitmap image stored in a file."
+DescEx="<p>Gets the dimensions of a bitmap image stored in a file.</p>"
 Extra="<p><strong>Note:</strong> for versions of Delphi that do not support the <mono>Types</mono> unit, try substituting <var>Windows.TSize</var> for <var>Types.TSize</var>.</p>"
 Units=Types,SysUtils,Classes,Windows
 SeeAlso=GetGIFSize,GetJPGSize,GetPNGSize
@@ -1038,7 +1038,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetGIFSize]
-Desc="Gets the dimensions of a GIF image stored in a file."
+DescEx="<p>Gets the dimensions of a GIF image stored in a file.</p>"
 Extra="<p><strong>Note:</strong> for versions of Delphi that do not support the <mono>Types</mono> unit, try substituting <var>Windows.TSize</var> for <var>Types.TSize</var>.</p> <p>Adapted from code submitted by Bill Miller.</p>"
 Units=Types,SysUtils,Classes
 SeeAlso=GetBMPSize,GetJPGSize,GetPNGSize
@@ -1062,7 +1062,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetIconHotspot]
-Desc="Gets position of the given icon's hotspot."
+DescEx="<p>Gets position of the given icon's hotspot.</p>"
 Extra="<p>This routine is particularly useful if the icon represents a cursor. This is done by assigning a cursor's handle the icon's <var>Handle property</var>.</p>"
 Units=Graphics,Windows,SysUtils
 SeeAlso=IsCursorIcon,IsColorIcon,GetIconANDBitmask,GetIconXORBitmask
@@ -1086,7 +1086,7 @@ Delphi10S=Y
 FPC=N
 
 [GetJPGSize]
-Desc="Gets the dimensions of a JPEG image stored in a file."
+DescEx="<p>Gets the dimensions of a JPEG image stored in a file.</p>"
 Extra="<p><strong>Note:</strong> for versions of Delphi that do not support the <mono>Types</mono> unit, try substituting <var>Windows.TSize</var> for <var>Types.TSize</var>.</p> <p>Adapted from code submitted by Bill Miller.</p>"
 Units=Types,SysUtils,Classes
 Depends=ReadBigEndianWord
@@ -1111,7 +1111,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetPNGSize]
-Desc="Gets the dimensions of a PNG image stored in a file."
+DescEx="<p>Gets the dimensions of a PNG image stored in a file.</p>"
 Extra="<p><strong>Note:</strong> for versions of Delphi that do not support the <mono>Types</mono> unit, try substituting <var>Windows.TSize</var> for <var>Types.TSize</var>.</p> <p>Adapted from code submitted by Bill Miller.</p>"
 Units=Types,SysUtils,Classes
 Depends=ReadBigEndianWord
@@ -1288,7 +1288,7 @@ Delphi10S=Y
 FPC=N
 
 [IsCursorIcon]
-Desc="Checks if an icon represents a cursor. Returns True if icon represents a cursor or False if icon is a standard icon."
+DescEx="<p>Checks if an icon represents a cursor. Returns True if icon represents a cursor or False if icon is a standard icon.</p>"
 Extra="<p>To create an icon that represent a cursor, store the cursor's handle in the icon's <var>Handle</var> property.</p>"
 Units=Graphics,Windows,SysUtils
 SeeAlso=IsColorIcon,GetIconHotspot,GetIconANDBitmask,GetIconXORBitmask
@@ -1313,7 +1313,7 @@ FPC=N
 
 [IsTrueTypeFont_A]
 DisplayName="IsTrueTypeFont (TFont overload)"
-Desc="Checks if a font is a true type font."
+DescEx="<p>Checks if a font is a true type font.</p>"
 Units=Windows,Graphics
 Depends=CreateDisplayDC,IsFlagSet
 SeeAlso=IsTrueTypeFont_B
@@ -1338,7 +1338,7 @@ FPC=N
 
 [IsTrueTypeFont_B]
 DisplayName="IsTrueTypeFont (string overload)"
-Desc="Checks if a named font is a true type font."
+DescEx="<p>Checks if a named font is a true type font.</p>"
 Units=Graphics
 Depends=IsTrueTypeFont_A
 SeeAlso=IsTrueTypeFont_A
@@ -1380,7 +1380,7 @@ Delphi10S=Y
 FPC=N
 
 [LightenColor]
-Desc="System colours are converted to their actual values before conversion."
+DescEx="<p>System colours are converted to their actual values before conversion.</p>"
 Extra="<p>Lightening a colour by 0% does not change it. Lightening by 100% or more makes the colour white.</p><p>System colours are converted to the actual colour they represent before lightening.</p><p>Inspired by code contributed by both Topellina and Michael Rockett.</p>"
 Units=Windows,Graphics
 Depends=Clamp,ExtractRGB
@@ -1405,7 +1405,7 @@ Delphi10S=Y
 FPC=N
 
 [RGBToHSB]
-Desc="Converts an RGB colour to the equivalent HSV (HSB) colour."
+DescEx="<p>Converts an RGB colour to the equivalent HSV (HSB) colour.</p>"
 Units=Windows,Math
 Depends=THSBColor
 SeeAlso=ColorToHSB
@@ -1529,7 +1529,7 @@ FPC=Y
 
 [RGBQuadArray]
 Kind=type
-Desc="A 256 element array of RGB quad values."
+DescEx="<p>A 256 element array of RGB quad values.</p>"
 Extra="<p>Useful when working with 32 bit bitmap scanlines.</p><p>A similar type is used in the implementation of the Delphi <var>Graphics</var> unit, but is not exposed in the unit interface.</p>"
 Units=Windows
 SeeAlso=RGBTripleArray
@@ -1554,7 +1554,7 @@ FPC=Y
 
 [RGBTripleArray]
 Kind=type
-Desc="A 256 element array of RGB triple values."
+DescEx="<p>A 256 element array of RGB triple values.</p>"
 Extra="<p>Useful when working with 24 bit bitmap scanlines.</p><p>A similar type is used in the implementation of the Delphi <var>Graphics</var> unit, but is not exposed in the unit interface.</p>"
 Units=Windows
 SeeAlso=RGBQuadArray
@@ -1602,7 +1602,7 @@ FPC=Y
 
 [TGreyScaleMethod]
 Kind=type
-Desc="Enumeration of possible methods used when coverting a bitmap to greyscale."
+DescEx="<p>Enumeration of possible methods used when coverting a bitmap to greyscale.</p>"
 Extra="<p>Used in parameter lists of <var>GreyScale</var> overloaded routines.</p> <p>Names based on the <em>Lightness</em>, <em>Average</em> and <em>Luminosity</em> algorithms presented in <a href="http://www.johndcook.com/blog/2009/08/24/algorithms-convert-color-grayscale/">The Endeavour</a> blog.</p>"
 SeeAlso=GreyScale_A,GreyScale_B
 Snip=445.dat
@@ -1626,7 +1626,7 @@ FPC=Y
 
 [THSBColor]
 Kind=type
-Desc="Record storing Hue, Saturation and Brightness colour space values."
+DescEx="<p>Record storing Hue, Saturation and Brightness colour space values.</p>"
 SeeAlso=RGBToHSB,ColorToHSB
 Snip=286.dat
 Delphi2=Y
