--- a/csdb/collection/multimedia.ini
+++ b/csdb/collection/multimedia.ini
@@ -6,7 +6,7 @@
 # https://gravatar.com/delphidabbler
 
 [PlaySound]
-Desc="Plays sound from the given wave (.wav) file asynchronously."
+DescEx="<p>Plays sound from the given wave (.wav) file asynchronously.</p>"
 Extra="<p>From Bill Miller's snippets collection.</p>"
 Units=MMSystem
 Snip=403.dat
