--- a/csdb/collection/shell.ini
+++ b/csdb/collection/shell.ini
@@ -6,7 +6,7 @@
 # https://gravatar.com/delphidabbler
 
 [AddToRecentDocs]
-Desc="Adds the given file to the Recent Documents folder."
+DescEx="<p>Adds the given file to the Recent Documents folder.</p>"
 Units=ShlObj
 SeeAlso=ClearRecentDocs
 Snip=013.dat
@@ -29,7 +29,7 @@ Delphi10S=Y
 FPC=N
 
 [ClearRecentDocs]
-Desc="Clears the Recent Documents folder."
+DescEx="<p>Clears the Recent Documents folder.</p>"
 Units=ShlObj
 SeeAlso=AddToRecentDocs
 Snip=014.dat
@@ -238,7 +238,7 @@ Delphi10S=Y
 FPC=N
 
 [GetDesktopFolder]
-Desc="Returns the path to the current user's desktop."
+DescEx="<p>Returns the path to the current user's desktop.</p>"
 Extra="<p>Modified from code in Bill Miller's snippets collection.</p>"
 SeeAlso=SpecialFolderPath,CommonFilesFolder,ProgramFilesFolder,SystemFolder,TempFolder,WindowsFolder
 Depends=IsSpecialFolderSupported,SpecialFolderPath
@@ -335,7 +335,7 @@ Delphi10S=Y
 FPC=N
 
 [IsShellLink]
-Desc="Checks if the given file is a shell link."
+DescEx="<p>Checks if the given file is a shell link.</p>"
 Units=ActiveX
 Depends=LoadShellLink
 SeeAlso=CreateShellLink,FileFromShellLink,LoadShellLink
@@ -477,7 +477,7 @@ Delphi10S=Y
 FPC=N
 
 [TaskbarBounds]
-Desc="Returns the bounding rectangle of the Windows taskbar, or an empty rectangle on error."
+DescEx="<p>Returns the bounding rectangle of the Windows taskbar, or an empty rectangle on error.</p>"
 Units=Windows,ShellAPI
 Depends=TaskbarHandle
 SeeAlso=TaskbarHandle
@@ -501,7 +501,7 @@ Delphi10S=Y
 FPC=N
 
 [TaskbarHandle]
-Desc="Returns the window handle of the Windows task bar."
+DescEx="<p>Returns the window handle of the Windows task bar.</p>"
 Extra="<p>Based on sample code by Michael Beck in an article formerly on Borland Code Central.</p>"
 Units=Windows
 SeeAlso=TaskbarBounds,TrayHandle
@@ -525,7 +525,7 @@ Delphi10S=Y
 FPC=Y
 
 [TrayHandle]
-Desc="Returns the window handle of the system tray area of the Windows task bar."
+DescEx="<p>Returns the window handle of the system tray area of the Windows task bar.</p>"
 Units=Windows
 Depends=TaskbarHandle
 SeeAlso=TaskbarHandle
@@ -573,7 +573,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsIEInstalled]
-Desc="Checks if Internet Explorer is installed on the system."
+DescEx="<p>Checks if Internet Explorer is installed on the system.</p>"
 Extra="Contributed by Michael Rockett and renamed."
 Depends=ProgIDInstalled
 Snip=566.dat
@@ -717,7 +717,7 @@ Delphi10S=Y
 FPC=N
 
 [TaskAllocWideString]
-Desc="Copies the given string to a wide string buffer allocated by the shell's task allocator and returns a pointer to the buffer."
+DescEx="<p>Copies the given string to a wide string buffer allocated by the shell's task allocator and returns a pointer to the buffer.</p>"
 Extra="<p>The buffer returned by the function must be freed using the task allocator, for example with <var>IMalloc.Free</var>.</p>"
 Units=Windows,ActiveX
 Snip=061.dat
