--- a/csdb/collection/string.ini
+++ b/csdb/collection/string.ini
@@ -195,7 +195,7 @@ Delphi10S=Y
 FPC=Y
 
 [DOSLineBreaks]
-Desc="Converts all Unix and Mac line endings in the given string to DOS line endings and returns the result."
+DescEx="<p>Converts all Unix and Mac line endings in the given string to DOS line endings and returns the result.</p>"
 Extra="<p>Any existing DOS line breaks are preserved.</p>"
 Units=SysUtils
 SeeAlso=UnixLineBreaks
@@ -243,7 +243,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsValidDouble]
-Desc="Checks if the given string represents a valid double precision floating point number."
+DescEx="<p>Checks if the given string represents a valid double precision floating point number.</p>"
 Units=SysUtils
 SeeAlso=IsValidExtended,IsValidSingle
 Snip=454.dat
@@ -266,7 +266,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsValidExtended]
-Desc="Checks if the given string represents a valid extended precision floating point number."
+DescEx="<p>Checks if the given string represents a valid extended precision floating point number.</p>"
 Units=SysUtils
 SeeAlso=IsValidDouble,IsValidSingle
 Snip=455.dat
@@ -289,7 +289,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsValidSingle]
-Desc="Checks if the given string represents a valid single precision floating point number."
+DescEx="<p>Checks if the given string represents a valid single precision floating point number.</p>"
 Units=SysUtils
 SeeAlso=IsValidDouble,IsValidExtended
 Snip=456.dat
@@ -479,7 +479,7 @@ Delphi10S=Y
 FPC=Y
 
 [AnsiStringToCharSet]
-Desc="Creates and returns a set of all the unique characters from the given ANSI string."
+DescEx="<p>Creates and returns a set of all the unique characters from the given ANSI string.</p>"
 Extra="<p><warning>Note:</warning> This function works <strong>does not</strong> work with multi-byte ANSI strings: it assumes a character occupies exactly one byte.</p>"
 Depends=RawByteString,TCharSet
 Snip=363.dat
@@ -567,7 +567,7 @@ Delphi10S=Y
 FPC=Y
 
 [CompressWhiteSpace]
-Desc="Returns a copy of the given string where each sequence of one or more white space characters is replaced by a single space character."
+DescEx="<p>Returns a copy of the given string where each sequence of one or more white space characters is replaced by a single space character.</p>"
 Extra="<p><strong>Note:</strong> This function treats only the <em>space</em>, <mono>TAB</mono>, <mono>LF</mono>, <mono>VT</mono>, <mono>FF</mono> and <mono>CR</mono> characters as white space.</p>"
 Units=SysUtils
 Depends=IsWhiteSpace
@@ -592,7 +592,7 @@ Delphi10S=Y
 FPC=Y
 
 [ContainsWhiteSpace]
-Desc="Checks if the given string contains any white space."
+DescEx="<p>Checks if the given string contains any white space.</p>"
 Extra="<p><strong>Note:</strong> This function treats only the <em>space</em>, <mono>TAB</mono>, <mono>LF</mono>, <mono>VT</mono>, <mono>FF</mono> and <mono>CR</mono> characters as white space.</p>"
 Depends=ContainsDelims
 SeeAlso=ContainsDelims,CompressWhiteSpace,IsWhiteSpace,StripWhiteSpace
@@ -616,7 +616,7 @@ Delphi10S=Y
 FPC=Y
 
 [CountWords]
-Desc="Returns the number of white space delimited words in the given string."
+DescEx="<p>Returns the number of white space delimited words in the given string.</p>"
 Extra="<p><strong>Note:</strong> This function treats only the <em>space</em>, <mono>TAB</mono>, <mono>LF</mono>, <mono>VT</mono>, <mono>FF</mono> and <mono>CR</mono> characters as white space.</p>"
 Units=Classes
 Depends=ExplodeWords
@@ -902,7 +902,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsHexStr]
-Desc="Checks if the given string contains only valid hex digits. Returns True if so or False otherwise."
+DescEx="<p>Checks if the given string contains only valid hex digits. Returns True if so or False otherwise.</p>"
 Units=SysUtils
 Depends=IsCharInSet
 Snip=100.dat
@@ -973,7 +973,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsWhiteSpace]
-Desc="Checks if the given character is white space."
+DescEx="<p>Checks if the given character is white space.</p>"
 Extra="<p><strong>Note:</strong> This function treats only the <em>space</em>, <mono>TAB</mono>, <mono>LF</mono>, <mono>VT</mono>, <mono>FF</mono> and <mono>CR</mono> characters as white space.</p>"
 Units=SysUtils
 SeeAlso=CompressWhiteSpace,ContainsWhiteSpace,StripWhiteSpace
@@ -1089,7 +1089,7 @@ Delphi10S=Y
 FPC=Y
 
 [ReverseStr]
-Desc="Returns the reverse of the given string."
+DescEx="<p>Returns the reverse of the given string.</p>"
 Extra="<p>Renamed from a routine contributed by Rubem Nascimento da Rocha.</p>"
 Units=SysUtils,StrUtils
 SeeAlso=ReverseStrR
@@ -1114,7 +1114,7 @@ Delphi10S=Y
 FPC=Y
 
 [ReverseStrR]
-Desc="Returns the reverse of the given string."
+DescEx="<p>Returns the reverse of the given string.</p>"
 Extra="<p>Uses recursion.</p><p>Renamed from a routine contributed by Rubem Nascimento da Rocha.</p>"
 Units=SysUtils,StrUtils
 SeeAlso=ReverseStr
@@ -1374,7 +1374,7 @@ Delphi10S=Y
 FPC=Y
 
 [UnixLineBreaks]
-Desc="Converts all DOS and Mac line endings in the given string to Unix line endings and returns the result."
+DescEx="<p>Converts all DOS and Mac line endings in the given string to Unix line endings and returns the result.</p>"
 Extra="<p>Any existing Unix line breaks are preserved.</p>"
 Units=SysUtils
 SeeAlso=DOSLineBreaks
@@ -1645,7 +1645,7 @@ Delphi10S=Y
 FPC=Y
 
 [StripWhiteSpace]
-Desc="Removes all white space from the given string and returns the result."
+DescEx="<p>Removes all white space from the given string and returns the result.</p>"
 Extra="<p><strong>Note:</strong> This function treats only the <em>space</em>, <mono>TAB</mono>, <mono>LF</mono>, <mono>VT</mono>, <mono>FF</mono> and <mono>CR</mono> characters as white space.</p>"
 Units=SysUtils
 Depends=IsWhiteSpace
@@ -1670,7 +1670,7 @@ Delphi10S=Y
 FPC=Y
 
 [TitleCase]
-Desc="Converts the given string to title case and returns the result."
+DescEx="<p>Converts the given string to title case and returns the result.</p>"
 Extra="<p>This function assumes the use of the English language.</p><p>True <a href="http://en.wikipedia.org/wiki/Title_case">title case</a> should ignore minor words, like &quot;and&quot; and &quot;the&quot; but this function, like many others, doesn't do that.</p>"
 Units=SysUtils
 Depends=IsWhiteSpace,IsCharInSet
@@ -1694,7 +1694,7 @@ Delphi10S=Y
 FPC=Y
 
 [WordCount]
-Desc="Returns the number of white space delimited words in the given string."
+DescEx="<p>Returns the number of white space delimited words in the given string.</p>"
 Extra="<p><strong>Note:</strong> This function treats only the <em>space</em>, <mono>TAB</mono>, <mono>LF</mono>, <mono>VT</mono>, <mono>FF</mono> and <mono>CR</mono> characters as white space.</p>"
 Units=SysUtils
 Depends=CountDelims,CompressWhiteSpace
