--- a/csdb/collection/sys.ini
+++ b/csdb/collection/sys.ini
@@ -6,7 +6,7 @@
 # https://gravatar.com/delphidabbler
 
 [DebuggerPresent]
-Desc="Indicates whether the calling process is running within a debugger."
+DescEx="<p>Indicates whether the calling process is running within a debugger.</p>"
 Extra="<p>Contributed by DennisLV.</p>"
 Units=Windows
 Snip=136.dat
@@ -29,7 +29,7 @@ Delphi10S=Y
 FPC=Y
 
 [Delay]
-Desc="Delays processing for the given number of milliseconds without processing any messages."
+DescEx="<p>Delays processing for the given number of milliseconds without processing any messages.</p>"
 Extra="<p>This routine is aimed at console applications and threads that have no message queue. Normal GUI applications should not use this routine.</p><p>Modified in line with Pause routine per suggestions by Montor.</p>"
 Units=Windows
 SeeAlso=Pause
@@ -53,7 +53,7 @@ Delphi10S=Y
 FPC=Y
 
 [EmptyKeyQueue]
-Desc="Empties all keyboard messages from the message queue of any window belonging to the current thread."
+DescEx="<p>Empties all keyboard messages from the message queue of any window belonging to the current thread.</p>"
 Extra="<p>Contributed by DennisLV.</p>"
 Units=Windows,Messages
 SeeAlso=SendKeysToWindow
@@ -77,7 +77,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetBiosVendor]
-Desc="Returns the name of the computer's BIOS vendor."
+DescEx="<p>Returns the name of the computer's BIOS vendor.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 Units=Windows,Registry
 SeeAlso=GetProcessorIdentifier,GetProcessorName,GetSystemManufacturer,GetSystemProductName
@@ -170,7 +170,7 @@ Delphi10S=Y
 FPC=N
 
 [GetProcessorIdentifier]
-Desc="Returns the identifier of the computer's processor."
+DescEx="<p>Returns the identifier of the computer's processor.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 Units=Windows,Registry
 SeeAlso=GetBiosVendor,GetProcessorName,GetSystemManufacturer,GetSystemProductName
@@ -194,7 +194,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetProcessorName]
-Desc="Return the name of the computer's processor."
+DescEx="<p>Return the name of the computer's processor.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 Units=Windows,Registry
 SeeAlso=GetBiosVendor,GetProcessorIdentifier,GetSystemManufacturer,GetSystemProductName
@@ -218,7 +218,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetSystemManufacturer]
-Desc="Returns the name of the computer's manufacturer."
+DescEx="<p>Returns the name of the computer's manufacturer.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 Units=Windows,Registry
 SeeAlso=GetBiosVendor,GetProcessorIdentifier,GetProcessorName,GetSystemProductName
@@ -242,7 +242,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetSystemProductName]
-Desc="Returns the system product name."
+DescEx="<p>Returns the system product name.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 Units=Windows,Registry
 SeeAlso=GetBiosVendor,GetProcessorIdentifier,GetProcessorName,GetSystemManufacturer
@@ -336,7 +336,7 @@ Delphi10S=Y
 FPC=Y
 
 [HostIPAddress]
-Desc="Detects and returns the machine's local IP address, or 0.0.0.0 if the address is not found."
+DescEx="<p>Detects and returns the machine's local IP address, or <mono>0.0.0.0</mono> if the address is not found.</p>"
 Extra="<p>Contributed by DennisLV.</p>"
 Units=SysUtils,Windows,WinSock
 Snip=108.dat
@@ -359,7 +359,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsAdmin]
-Desc="Checks if the current user has administrator privileges."
+DescEx="<p>Checks if the current user has administrator privileges.</p>"
 Extra="<p>Contributed by Rubem Nascimento da Rocha.</p>"
 Units=Windows
 Snip=404.dat
@@ -428,7 +428,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsRunningOnBattery]
-Desc="Checks if the computer is running on battery power and returns True if so or False when running on mains or if the power status is unknown."
+DescEx="<p>Checks if the computer is running on battery power and returns True if so or False when running on mains or if the power status is unknown.</p>"
 Extra="<p>Based on code published on the <a href="http://www.delphifaq.com/">Delphi FAQ</a>.</p>"
 Units=Windows
 SeeAlso=RemainingBatteryPercent
@@ -477,7 +477,7 @@ Delphi10S=Y
 FPC=Y
 
 [ProgramFileName]
-Desc="Returns the executing program's file name."
+DescEx="<p>Returns the executing program's file name.</p>"
 Units=SysUtils
 Depends=ProgramFileSpec
 SeeAlso=ProgramFileSpec,ProgramName,ProgramPath
@@ -501,7 +501,7 @@ Delphi10S=Y
 FPC=Y
 
 [ProgramFileSpec]
-Desc=Returns the fully specified path and file name of the executing program.
+DescEx="<p>Returns the fully specified path and file name of the executing program.</p>"
 Extra="<p>Based on code suggested by Alan Bailey.</p>"
 SeeAlso=ProgramFileName,ProgramPath,ProgramName
 Snip=104.dat
@@ -524,7 +524,7 @@ Delphi10S=Y
 FPC=Y
 
 [ProgramName]
-Desc="Returns the name of the executing program (i.e. the program file name minus its extension)."
+DescEx="<p>Returns the name of the executing program (i.e. the program file name minus its extension).</p>"
 Depends=ProgramFileName,RemoveFileExt
 SeeAlso=ProgramFileSpec,ProgramFileName,ProgramPath
 Snip=107.dat
@@ -547,7 +547,7 @@ Delphi10S=Y
 FPC=Y
 
 [ProgramPath]
-Desc="Returns the directory containing the executing program."
+DescEx="<p>Returns the directory containing the executing program.</p>"
 Extra="<p>Based on code suggested by Alan Bailey.</p>"
 Units=SysUtils
 Depends=ProgramFileSpec
@@ -572,7 +572,7 @@ Delphi10S=Y
 FPC=Y
 
 [RemainingBatteryPercent]
-Desc="Returns remaining battery life as a percentage (0..100), or -1 if the remaining battery life is unknown."
+DescEx="<p>Returns remaining battery life as a percentage (0..100), or -1 if the remaining battery life is unknown.</p>"
 Extra="<p>Based on code published on the <a href="http://www.delphifaq.com/">Delphi FAQ</a>.</p>"
 Units=Windows
 SeeAlso=IsRunningOnBattery
@@ -644,7 +644,7 @@ Delphi10S=Y
 FPC=Y
 
 [CurrentMemoryUsage]
-Desc="Gets the current application memory usage or 0 on error."
+DescEx="<p>Gets the current application memory usage or 0 on error.</p>"
 Extra="<p><strong>Note:</strong> According to <a href="http://msdn.microsoft.com/en-us/library/ms683219.aspx">MSDN</a> this function requires Windows 2000 as a minimum. The <mono>PsAPI</mono> unit loads <var>GetProcessMemoryInfo</var> dynamically so that there is no catastrophic error on earlier OSs: <var>CurrentMemoryUsage</var> will quietly return 0.</p><p>Contributed by EX4.</p>"
 SeeAlso=TrimAppMemorySize
 Units=SysUtils,Windows,PsAPI
@@ -786,7 +786,7 @@ Delphi10S=Y
 FPC=N
 
 [GetDefaultPrinterName]
-Desc="Returns the name of the default printer or empty string if there is no default printer."
+DescEx="<p>Returns the name of the default printer or empty string if there is no default printer.</p>"
 Units=Printers
 Snip=562.dat
 Delphi2=Y
@@ -808,7 +808,7 @@ Delphi10S=Y
 FPC=N
 
 [GetEnvironmentBlockSize]
-Desc="Returns the size of the current process' environment block, in characters."
+DescEx="<p>Returns the size of the current process' environment block, in characters.</p>"
 Extra="<p><strong>Note:</strong> This routine returns the number of <em>characters</em> of data in the environment block, <strong>not</strong> the number of <em>bytes</em>. To get the number of bytes in the block, multiply the retuned value by <mono>SizeOf(Char)</mono>.</p>"
 SeeAlso=GetAllEnvVars,GetEnvVar,SetEnvVar,SetEnvVarValue,DeleteEnvVar
 Units=SysUtils,Windows
@@ -845,7 +845,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetErrorMessageWithId]
-Desc="Returns an error message string, in the current user's default language, that corresponds to the given OS error code. If the error code is zero, the empty string is returned."
+DescEx="<p>Returns an error message string, in the current user's default language, that corresponds to the given OS error code. If the error code is zero, the empty string is returned.</p>"
 Extra="<p>This routine is identical to <var>SysUserErrorMessage</var> except when <var>OSErrorCode</var> is 0, when <var>SysUserErrorMessage</var> returns a message and <var>GetLastErrorMessageWithId</var> returns the empty string.</p><p>Derived from code contributed by Johan Keizer.</p>"
 Depends=SysUserErrorMessage
 SeeAlso=SysUserErrorMessage
@@ -864,7 +864,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetMacAddress]
-Desc="Returns the MAC address of the first ethernet adapter on the computer or the empty string if there is no adapter or if the function fails."
+DescEx="<p>Returns the MAC address of the first ethernet adapter on the computer or the empty string if there is no adapter or if the function fails.</p>"
 Extra="<p><warning>Warning 1</warning>: Does not work on Windows Vista, Windows 2008 Server or later. This code depends on <mono>Netbios</mono> which is not supported on these OSs.</p> <p><warning>Warning 2</warning>: According to MSDN this code may not work reliably on the Windows 9x platform.</p>"
 Units=SysUtils,Windows,Nb30
 Snip=090.dat
@@ -925,7 +925,7 @@ Delphi10S=Y
 FPC=N
 
 [IsAppResponding]
-Desc="Checks if the application that owns the window with the given handle is responding (returns True), or hung (returns False)."
+DescEx="<p>Checks if the application that owns the window with the given handle is responding (returns True), or hung (returns False).</p>"
 Extra="<p>Exceptions are raised if the window handle is not valid or if the required API functions can't be loaded.</p><p>The code uses different User32 functions for Windows 95 and Windows NT - <var>IsHungThread</var> is used on Windows 9x and <var>IsHungAppWindow</var> on Windows NT.</p>"
 Units=SysUtils,Windows
 Depends=GetWindowThreadID,IsWinNT
@@ -996,7 +996,7 @@ Delphi10S=Y
 FPC=Y
 
 [ProcessMessages]
-Desc="Processes all the messages a program's message queue."
+DescEx="<p>Processes all the messages a program's message queue.</p>"
 Extra="<p>Can be used as light weight replacement for <var>Application.ProcessMessages</var>.</p><p>Conributed by Joe Donth.</p>"
 Units=Windows,Messages
 Snip=143.dat
@@ -1019,7 +1019,7 @@ Delphi10S=Y
 FPC=Y
 
 [RefreshEnvironment]
-Desc="Notifies all windows that the system environment variables have been changed."
+DescEx="<p>Notifies all windows that the system environment variables have been changed.</p>"
 Extra="<p>If you modify environment variables in the registry the rest of the system will not notice unless you notify them. Use this routine to do that.</p><p><strong>Note:</strong> You must change environment variables in the registry for the changes to have a global effect - changing your own application's environment won't work.</p>
 <p>Contributed by Michael Rockett. Adapted for 64 bit by DelphiDabbler.</p>"
 Units=Windows,Messages
@@ -1082,7 +1082,7 @@ Delphi10S=Y
 FPC=Y
 
 [SysUserErrorMessage]
-Desc="Returns an error message string, in the current user's default language, that corresponds to the given OS error code."
+DescEx="<p>Returns an error message string, in the current user's default language, that corresponds to the given OS error code.</p>"
 Extra="<p>This routine is identical to <var>GetLastErrorMessageWithId</var> except when <var>OSErrorCode</var> is 0, when <var>SysUserErrorMessage</var> returns a message and <var>GetLastErrorMessageWithId</var> returns the empty string.</p><p>Closely based on code contributed by Johan Keizer.</p>"
 SeeAlso=GetErrorMessageWithId
 Units=SysUtils,Windows
@@ -1119,7 +1119,7 @@ Delphi10S=Y
 FPC=Y
 
 [TrimAppMemorySize]
-Desc="Trims the application's working set to its minimum size."
+DescEx="<p>Trims the application's working set to its minimum size.</p>"
 Extra="<p>This routine temporarily trims the application's working set size to zero. This effectively means the process is swapped out of physical RAM.</p><p><strong>Note:</strong> This routine requires the correct privileges to succeed on Windows NT operating systems. See the MSDN documentation for <a href="http://msdn.microsoft.com/en-us/library/ms686234">SetProcessWorkingSetSize</a> for details.</p><p>Slightly modified from code contributed by Shlomo Abuisak.</p>"
 SeeAlso=CurrentMemoryUsage
 Units=Windows
