--- a/csdb/collection/utils.ini
+++ b/csdb/collection/utils.ini
@@ -6,7 +6,7 @@
 # https://gravatar.com/delphidabbler
 
 [BytesToGB]
-Desc="Converts the given number of bytes to gigabytes."
+DescEx="<p>Converts the given number of bytes to gigabytes.</p>"
 SeeAlso=BytesToGBStr,BytesToKB,BytesToMB
 Snip=295.dat
 Delphi2=N
@@ -51,7 +51,7 @@ Delphi10S=Y
 FPC=Y
 
 [BytesToKB]
-Desc="Converts the given number of bytes to kilobytes."
+DescEx="<p>Converts the given number of bytes to kilobytes.</p>"
 SeeAlso=BytesToKBStr,BytesToMB,BytesToGB
 Snip=297.dat
 Delphi2=N
@@ -96,7 +96,7 @@ Delphi10S=Y
 FPC=Y
 
 [BytesToMB]
-Desc="Converts the given number of bytes to megabytes."
+DescEx="<p>Converts the given number of bytes to megabytes.</p>"
 SeeAlso=BytesToMBStr,BytesToKB,BytesToGB
 Snip=299.dat
 Delphi2=N
@@ -184,7 +184,7 @@ Delphi10S=Y
 FPC=Y
 
 [EndianSwap]
-Desc="Swaps the given cardinal value between little endian and big endian format, and vica versa, and returns the result."
+DescEx="<p>Swaps the given cardinal value between little endian and big endian format, and vica versa, and returns the result.</p>"
 Extra="<p>Contributed by Montor.</p>"
 Snip=293.dat
 Delphi2=Y
@@ -206,7 +206,7 @@ Delphi10S=Y
 FPC=Y
 
 [ExchangeInt]
-Desc="Exchanges the values of two given integers."
+DescEx="<p>Exchanges the values of two given integers.</p>"
 Snip=123.dat
 Delphi2=Y
 Delphi3=Y
@@ -296,7 +296,7 @@ Delphi10S=Y
 FPC=Y
 
 [IntToNumberText]
-Desc="Returns the English text representation of the given integer."
+DescEx="<p>Returns the English text representation of the given integer.</p>"
 Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=FloatToNumberText,IntToRoman
@@ -435,7 +435,7 @@ Delphi10S=Y
 FPC=Y
 
 [ReadBigEndianWord]
-Desc="Reads and returns a word value from the given stream in big-endian format."
+DescEx="<p>Reads and returns a word value from the given stream in big-endian format.</p>"
 Units=Classes
 Snip=219.dat
 Delphi2=Y
@@ -527,7 +527,7 @@ Delphi10S=Y
 FPC=Y
 
 [CheckBDEInstalled]
-Desc="Checks if the BDE is installed."
+DescEx="<p>Checks if the BDE is installed.</p>"
 Extra="<p><warning>Warning:</warning> Some editions of Delphi (e.g. Delphi 6 personal) do not provide the <mono>BDE</mono> unit, and so the routine will not compile on them.</p><p>Contributed by mdeltas.</p>"
 Units=BDE
 Snip=256.dat
@@ -574,7 +574,7 @@ FPC=N
 
 [Exchange_Byte]
 DisplayName="Exchange (Byte overload)"
-Desc="Exchanges the values of two given unsigned 8 bit integers."
+DescEx="<p>Exchanges the values of two given unsigned 8 bit integers.</p>"
 SeeAlso=Exchange_Int64,Exchange_Longint,Exchange_Longword,Exchange_Shortint,Exchange_Smallint,Exchange_UInt64,Exchange_Word
 Snip=459.dat
 Delphi2=N
@@ -597,7 +597,7 @@ FPC=Y
 
 [Exchange_Int64]
 DisplayName="Exchange (Int64 overload)"
-Desc="Exchanges the values of two given signed 64 bit integers."
+DescEx="<p>Exchanges the values of two given signed 64 bit integers.</p>"
 SeeAlso=Exchange_Byte,Exchange_Longint,Exchange_Longword,Exchange_Shortint,Exchange_Smallint,Exchange_UInt64,Exchange_Word
 Snip=460.dat
 Delphi2=N
@@ -620,7 +620,7 @@ FPC=Y
 
 [Exchange_Longint]
 DisplayName="Exchange (Longint overload)"
-Desc="Exchanges the values of two given signed 32 bit integers."
+DescEx="<p>Exchanges the values of two given signed 32 bit integers.</p>"
 SeeAlso=Exchange_Byte,Exchange_Int64,Exchange_Longword,Exchange_Shortint,Exchange_Smallint,Exchange_UInt64,Exchange_Word,ExchangeInt.
 Snip=461.dat
 Delphi2=N
@@ -643,7 +643,7 @@ FPC=Y
 
 [Exchange_Longword]
 DisplayName="Exchange (Longword overload)"
-Desc="Exchanges the values of two given unsigned 32 bit integers."
+DescEx="<p>Exchanges the values of two given unsigned 32 bit integers.</p>"
 SeeAlso=Exchange_Byte,Exchange_Int64,Exchange_Longint,Exchange_Shortint,Exchange_Smallint,Exchange_UInt64,Exchange_Word
 Snip=462.dat
 Delphi2=N
@@ -666,7 +666,7 @@ FPC=Y
 
 [Exchange_Shortint]
 DisplayName="Exchange (Shortint overload)"
-Desc="Exchanges the values of two given signed 8 bit integers."
+DescEx="<p>Exchanges the values of two given signed 8 bit integers.</p>"
 SeeAlso=Exchange_Byte,Exchange_Int64,Exchange_Longint,Exchange_Longword,Exchange_Smallint,Exchange_UInt64,Exchange_Word
 Snip=463.dat
 Delphi2=N
@@ -689,7 +689,7 @@ FPC=Y
 
 [Exchange_Smallint]
 DisplayName="Exchange (Smallint overload)"
-Desc="Exchanges the values of two given signed 16 bit integers."
+DescEx="<p>Exchanges the values of two given signed 16 bit integers.</p>"
 SeeAlso=Exchange_Byte,Exchange_Int64,Exchange_Longint,Exchange_Longword,Exchange_Shortint,Exchange_UInt64,Exchange_Word
 Snip=464.dat
 Delphi2=N
@@ -712,7 +712,7 @@ FPC=Y
 
 [Exchange_UInt64]
 DisplayName="Exchange (UInt64 overload)"
-Desc="Exchanges the values of two given unsigned 64 bit integers."
+DescEx="<p>Exchanges the values of two given unsigned 64 bit integers.</p>"
 SeeAlso=Exchange_Byte,Exchange_Int64,Exchange_Longint,Exchange_Longword,Exchange_Shortint,Exchange_Smallint,Exchange_Word
 Snip=465.dat
 Delphi2=N
@@ -735,7 +735,7 @@ FPC=Y
 
 [Exchange_Word]
 DisplayName="Exchange (Word overload)"
-Desc="Exchanges the values of two given unsigned 16 bit integers."
+DescEx="<p>Exchanges the values of two given unsigned 16 bit integers.</p>"
 SeeAlso=Exchange_Byte,Exchange_Int64,Exchange_Longint,Exchange_Longword,Exchange_Shortint,Exchange_Smallint,Exchange_UInt64
 Snip=466.dat
 Delphi2=N
@@ -861,7 +861,7 @@ Delphi10S=Y
 FPC=N
 
 [FractionToStr]
-Desc="Converts a fraction expressed as a numerator and denominator to a string."
+DescEx="<p>Converts a fraction expressed as a numerator and denominator to a string.</p>"
 Extra="<p>From Bill Miller's snippets collection.</p>"
 Units=SysUtils
 SeeAlso=FractionToStrEx,NormaliseFractionSign
@@ -1018,7 +1018,7 @@ Delphi10S=Y
 FPC=Y
 
 [ProgIDInstalled]
-Desc="Checks if the given program identifier is known to the system, i.e. is installed."
+DescEx="<p>Checks if the given program identifier is known to the system, i.e. is installed.</p>"
 Extra="<p><strong>Example:</strong> <mono><strong>if</strong> ProgIdInstalled('InternetExplorer.Application') <strong>then</strong> ...</mono></p><p>Contributed by Michael Rockett.</p>"
 Units=ActiveX
 Snip=331.dat
