--- a/csdb/collection/wb.ini
+++ b/csdb/collection/wb.ini
@@ -183,7 +183,7 @@ Delphi10S=Y
 FPC=N
 
 [WBIsDOMLoaded]
-Desc="Checks if the given web browser control contains a valid document that supports the DOM."
+DescEx="<p>Checks if the given web browser control contains a valid document that supports the DOM.</p>"
 Extra="Examples of document types that support the DOM are HTML and XML. This routine is a combination of versions of the same code contributed by Bill Miller and Peter Johnson."
 SeeAlso=WBWaitForDocToLoad,WBWaitForDOMToLoad
 Units=SysUtils,SHDocVw,MSHTML
@@ -203,7 +203,7 @@ FPC=N
 
 [WBNavigate_A]
 DisplayName="WBNavigate (basic version)"
-Desc="Loads the document with the given URL into the given browser control and waits for the document to load."
+DescEx="<p>Loads the document with the given URL into the given browser control and waits for the document to load.</p>"
 Extra="<p>Inspired by code contributed by Bill Miller.</p>"
 SeeAlso=WBBlankDocument,WBNavigate_B
 Depends=WBWaitForDocToLoad
@@ -324,7 +324,7 @@ Delphi10S=Y
 FPC=N
 
 [WBShowFindDlg]
-Desc="Displays the given web browser control's Find dialogue box to enable the currently loaded document to be searched."
+DescEx="<p>Displays the given web browser control's Find dialogue box to enable the currently loaded document to be searched.</p>"
 Extra="<p>Some document types do not support this command. In those cases nothing will be displayed.</p><p>Slightly modified from code contributed by Bill Miller.</p>"
 SeeAlso=WBShowPageSetupDlg,WBShowPrintDlg,WBShowPrintPreviewDlg,WBShowPropertiesDlg,WBShowSourceCode
 Depends=WBInvokeCmd_B
@@ -344,7 +344,7 @@ Delphi10S=Y
 FPC=N
 
 [WBShowPageSetupDlg]
-Desc="Displays the given browser control's Page Setup dialogue box to provide print options for the currently loaded document."
+DescEx="<p>Displays the given browser control's Page Setup dialogue box to provide print options for the currently loaded document.</p>"
 Extra="<p>Some document types do not support this command. In those cases nothing will be displayed.</p><p>Modified from code contributed by Bill Miller.</p>"
 SeeAlso=WBShowFindDlg,WBShowPrintDlg,WBShowPrintPreviewDlg,WBShowPropertiesDlg,WBShowSourceCode
 Depends=WBInvokeCmd_B
@@ -364,7 +364,7 @@ Delphi10S=Y
 FPC=N
 
 [WBShowPrintDlg]
-Desc="Displays the given web browser control's Print dialogue box to enable any currently loaded document to be printed."
+DescEx="<p>Displays the given web browser control's Print dialogue box to enable any currently loaded document to be printed.</p>"
 Extra="<p>The print dialogue box can be used for any type of document that the browser control knows how to print. The appearance of the dialogue box may change, depending on the document type.</p><p>Modified from code contributed by Bill Miller.</p>"
 SeeAlso=WBShowFindDlg,WBShowPageSetupDlg,WBShowPrintPreviewDlg,WBShowPropertiesDlg,WBShowSourceCode
 Depends=WBInvokeCmd_B
@@ -384,7 +384,7 @@ Delphi10S=Y
 FPC=N
 
 [WBShowPrintPreviewDlg]
-Desc="Displays the given web browser control's Print Preview dialogue box displaying a preview of the currently loaded document."
+DescEx="<p>Displays the given web browser control's Print Preview dialogue box displaying a preview of the currently loaded document.</p>"
 Extra="<p>Some document types do not support this command. In those cases nothing will be displayed.</p><p>Modified from code contributed by Bill Miller.</p>"
 SeeAlso=WBShowFindDlg,WBShowPageSetupDlg,WBShowPrintDlg,WBShowPropertiesDlg,WBShowSourceCode
 Depends=WBInvokeCmd_B
@@ -404,7 +404,7 @@ Delphi10S=Y
 FPC=N
 
 [WBShowPropertiesDlg]
-Desc="Displays the given webbrowser control's Properties dialogue box containing details of the currently loaded document."
+DescEx="<p>Displays the given webbrowser control's Properties dialogue box containing details of the currently loaded document.</p>"
 Extra="<p>Some document types do not support this command. In those cases nothing will be displayed.</p><p>Inspired by code contributed by Bill Miller.</p>"
 SeeAlso=WBShowFindDlg,WBShowPageSetupDlg,WBShowPrintDlg,WBShowPrintPreviewDlg,WBShowSourceCode
 Depends=WBInvokeCmd_B
@@ -424,7 +424,7 @@ Delphi10S=Y
 FPC=N
 
 [WBShowSourceCode]
-Desc="Displays the source code of the document currently loaded in the given web browser control."
+DescEx="<p>Displays the source code of the document currently loaded in the given web browser control.</p>"
 Extra="<p>The source code is displayed in Internet Explorer's default editor.</p><p>This command is not valid for all document types: in those cases no dialogue box will appear.</p><p>Slightly modified from code contributed by Bill Miller.</p>"
 SeeAlso=WBShowFindDlg,WBShowPageSetupDlg,WBShowPrintDlg,WBShowPrintPreviewDlg,WBShowPropertiesDlg
 Depends=WBInvokeCmd_B
