--- a/csdb/collection/web.ini
+++ b/csdb/collection/web.ini
@@ -52,7 +52,7 @@ Delphi10S=Y
 FPC=N
 
 [DownloadURLToFile]
-Desc="Downloads the contents of a file at the specified URL and stores in the given local file. Returns True if the download succeeds and False on failure."
+DescEx="<p>Downloads the contents of a file at the specified URL and stores in the given local file. Returns True if the download succeeds and False on failure.</p>"
 Extra="<p>A connection to the internet must be open for the download to succeed.</p>"
 Units=UrlMon,Windows,SysUtils
 SeeAlso=IsValidURLProtocol
@@ -76,7 +76,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetIEVersionStr]
-Desc="The the version of Internet Explorer installed on the computer. Returns '' if IE is not installed or if it is earlier than v4."
+DescEx="<p>The the version of Internet Explorer installed on the computer. Returns '' if IE is not installed or if it is earlier than v4.</p>"
 Units=Windows,Registry
 Snip=266.dat
 Delphi2=N
@@ -98,7 +98,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsValidURLProtocol]
-Desc="Checks if the given URL is valid per RFC1738. Returns True if valid and False if not."
+DescEx="<p>Checks if the given URL is valid per <a href="https://datatracker.ietf.org/doc/html/rfc1738">RFC1738</a>. Returns True if valid and False if not.</p>"
 Units=SysUtils
 SeeAlso=BrowseURL,DownloadURLToFile
 Snip=024.dat
@@ -144,7 +144,7 @@ Delphi10S=Y
 FPC=Y
 
 [ExtractURIFragment]
-Desc="Returns any fragment component of the given URI. Returns the empty string if the URI has no fragment."
+DescEx="<p>Returns any fragment component of the given URI. Returns the empty string if the URI has no fragment.</p>"
 Extra="<p>Fragments appear at the end of a URI and begin with a '#'character, which is not included in the return value.</p><p><strong>Note:</strong> Unexpected results may occur if the URI is malformed or is not properly URI encoded.</p>"
 Units=SysUtils
 SeeAlso=ExtractURIQueryString,RemoveURIFragment
@@ -168,7 +168,7 @@ Delphi10S=Y
 FPC=Y
 
 [ExtractURIQueryString]
-Desc="Returns any query string component of a given URI. Returns the empty string if the URI has no query string."
+DescEx="<p>Returns any query string component of a given URI. Returns the empty string if the URI has no query string.</p>"
 Extra="<p>Query strings begin with the '?' character, which is not included in the return value. A query string may be followed by a fragment, which begins with '#'. Fragments are not included in the returned query string.</p><p><strong>Note:</strong> Unexpected results may occur if the URI is malformed or if the query string is not properly URI encoded.</p>"
 Units=SysUtils
 SeeAlso=ExtractURIFragment,RemoveURIQueryString
@@ -192,7 +192,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsInternetConnected]
-Desc="Checks if a computer is connected to the internet."
+DescEx="<p>Checks if a computer is connected to the internet.</p>"
 Extra="<p>A return value of True indicates that at least a connection to the Internet is available. It doesn't guarantee that a connection to a specific host can be established. For more information see the <a href="http://msdn.microsoft.com/en-us/library/aa384702">InternetGetConnectedState</a> documentation on MSDN.</p><p><strong>NOTE:</strong> This function has been found to be unreliable on some operating systems. Please see the alternative <var>CheckInternetConnection</var> routine.</p>"
 Units=Windows,WinInet
 SeeAlso=CheckInternetConnection
@@ -216,7 +216,7 @@ Delphi10S=Y
 FPC=Y
 
 [MakeSafeHTMLText]
-Desc="Replaces any characters in the given text that are not HTML-compatible with suitable escaped versions and returns the modified string."
+DescEx="<p>Replaces any characters in the given text that are not HTML-compatible with suitable escaped versions and returns the modified string.</p>"
 Extra="<p><warning>Warning:</warning> This function was designed in the expectation that the output HTML would be ANSI or ASCII encoded. Therefore so all characters above ASCII 126 are encoded as character entities containing character codes. This may cause problems where Unicode (inc UTF-8) encoded HTML is expected since the character codes may not map correctly in those encodings.</p>"
 Units=SysUtils
 SeeAlso=URIEncode
@@ -240,7 +240,7 @@ Delphi10S=Y
 FPC=Y
 
 [RemoveURIFragment]
-Desc="Removes any fragment part from the end of the given URI and returns the result. The URI is returned unchanged if it has no fragment."
+DescEx="<p>Removes any fragment part from the end of the given URI and returns the result. The URI is returned unchanged if it has no fragment.</p>"
 Extra="<p>Fragments appear at the end of a URI and begin with a '#'character.</p><p><strong>Note:</strong> Unexpected results may occur if the URI is malformed or is not properly URI encoded.</p>"
 Units=SysUtils
 SeeAlso=ExtractURIFragment,RemoveURIQueryString
@@ -264,7 +264,7 @@ Delphi10S=Y
 FPC=Y
 
 [RemoveURIQueryString]
-Desc="Removes any query string from the given URI and returns the result. The URI is returned unchanged if it has no query string."
+DescEx="<p>Removes any query string from the given URI and returns the result. The URI is returned unchanged if it has no query string.</p>"
 Extra="<p>Query strings begin with the '?' character. A query string may be followed by a fragment, which begins with a '#'.</p><p><strong>Note:</strong> Unexpected results may occur if the query string is malformed or is not properly URI encoded.</p>"
 Units=SysUtils
 SeeAlso=ExtractURIQueryString,RemoveURIFragment
@@ -336,7 +336,7 @@ Delphi10S=Y
 FPC=Y
 
 [URLDecode]
-Desc="Decodes the given encoded URL or URL query string. Raises an exception if the encoded URL is badly formed."
+DescEx="<p>Decodes the given encoded URL or URL query string. Raises an exception if the encoded URL is badly formed.</p>"
 Extra="<p><warning>Note:</warning> Where possible you should used <var>URIDecode</var> in preference to this snippet because <var>URIDecode</var> is fully standards compliant whereas this snippet is not.</p><p>Derived from a similar function published on <a href="http://www.torry.net/">Torry's Delphi Pages</a>.</p>"
 Units=SysUtils
 SeeAlso=URIDecode,URIEncode,URLEncode
