--- a/csdb/collection/windows.ini
+++ b/csdb/collection/windows.ini
@@ -53,7 +53,7 @@ Delphi10S=Y
 FPC=N
 
 [DisableLayersSupport]
-Desc="Disables layers (transparency) support for the window with the given handle."
+DescEx="<p>Disables layers (transparency) support for the window with the given handle.</p>"
 Units=Windows
 SeeAlso=EnableLayersSupport,WindowSupportsLayers
 Snip=283.dat
@@ -76,7 +76,7 @@ Delphi10S=Y
 FPC=Y
 
 [DisableTreeViewToolTips]
-Desc="Disables the tool tips that are displayed in the given treeview control when the mouse is hovered over an item that is cropped because it is too large to display."
+DescEx="<p>Disables the tool tips that are displayed in the given treeview control when the mouse is hovered over an item that is cropped because it is too large to display.</p>"
 Extra="<p>This routine is of use with earlier versions of Delphi in which the tree view component does not have a property to switch tool tips on and off.</p>"
 Units=Windows,ComCtrls,CommCtrl
 Snip=507.dat
@@ -123,7 +123,7 @@ Delphi10S=Y
 FPC=Y
 
 [GetIdleTime]
-Desc="Returns the time ellapsed since the last user input."
+DescEx="<p>Returns the time ellapsed since the last user input.</p>"
 Extra="<p>Modified from code contributed by Topellina.</p>"
 Units=Windows
 Snip=371.dat
@@ -193,7 +193,7 @@ Delphi10S=Y
 FPC=Y
 
 [HScrollbarHeight]
-Desc="Returns the height of the given control's horizontal scrollbar if shown, or 0 if not shown."
+DescEx="<p>Returns the height of the given control's horizontal scrollbar if shown, or 0 if not shown.</p>"
 Units=Controls,Windows,StdCtrls
 Depends=WinControlScrollbars
 SeeAlso=VScrollbarWidth,WinControlScrollbars,WindowScrollbars
@@ -217,7 +217,7 @@ Delphi10S=Y
 FPC=N
 
 [IsEqualResID]
-Desc="Checks whether the two given resource ids are equal."
+DescEx="<p>Checks whether the two given resource ids are equal.</p>"
 Units=SysUtils,Windows
 Depends=IsIntResource
 SeeAlso=IsIntResource,ResourceIDToStr
@@ -241,7 +241,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsTopLevelWindow]
-Desc="Checks if the window with the given handle is a top level window."
+DescEx="<p>Checks if the window with the given handle is a top level window.</p>"
 Units=Windows
 SeeAlso=GetTopLevelWindow
 Snip=172.dat
@@ -383,7 +383,7 @@ Delphi10S=Y
 FPC=Y
 
 [TreeNodeChildCount]
-Desc="Returns the number of child nodes of the given tree node."
+DescEx="<p>Returns the number of child nodes of the given tree node.</p>"
 Extra="<p>Derived from code contributed by Bill Miller.</p>"
 Units=ComCtrls
 Snip=508.dat
@@ -406,7 +406,7 @@ Delphi10S=Y
 FPC=N
 
 [VScrollbarWidth]
-Desc="Returns the width of the given control's vertical scrollbar if shown, or 0 if not shown."
+DescEx="<p>Returns the width of the given control's vertical scrollbar if shown, or 0 if not shown.</p>"
 Units=Controls,Windows,StdCtrls
 Depends=WinControlScrollbars
 SeeAlso=HScrollbarHeight,WinControlScrollbars,WindowScrollbars
@@ -454,7 +454,7 @@ Delphi10S=Y
 FPC=N
 
 [WindowScrollbars]
-Desc="Returns a value that specifies which, if any, scroll bars are displayed by the window with the given handle."
+DescEx="<p>Returns a value that specifies which, if any, scroll bars are displayed by the window with the given handle.</p>"
 Extra="<p>Based on code by Peter Below from the now defunct Delphi Pool website.</p>"
 Units=Windows,StdCtrls
 SeeAlso=HScrollbarHeight,VScrollbarWidth,WinControlScrollbars
@@ -478,7 +478,7 @@ Delphi10S=Y
 FPC=N
 
 [WindowSupportsLayers]
-Desc="Checks if the window with the given handler supports layers (i.e. transparency)."
+DescEx="<p>Checks if the window with the given handler supports layers (i.e. transparency).</p>"
 Units=Windows
 Depends=IsFlagSet
 SeeAlso=DisableLayersSupport,EnableLayersSupport
@@ -502,7 +502,7 @@ Delphi10S=Y
 FPC=Y
 
 [ContainsFocus]
-Desc="Returns True if the specified control, or one of its child controls, currently has the input focus."
+DescEx="<p>Returns True if the specified control, or one of its child controls, currently has the input focus.</p>"
 Extra="<p>Adapted from the article &quot;<a href="https://www.thoughtco.com/how-to-move-and-resize-controls-at-run-time-4092542">Implementing 'Contains Focus' for Delphi's Container Controls: TPanel, TGroupBox</a>&quot; on About.com.</p>"
 Depends=FocusedControl
 SeeAlso=FocusedControl
@@ -574,7 +574,7 @@ Delphi10S=Y
 FPC=Y
 
 [LangIDFromLCID]
-Desc="Extracts and returns a language identifier from the given locale identifier."
+DescEx="<p>Extracts and returns a language identifier from the given locale identifier.</p>"
 Extra="<p>Emulates the Windows <var>LANGIDFROMLCID</var> macro.</p>"
 Units=Windows
 SeeAlso=MakeLCID,SortIDFromLCID
@@ -645,7 +645,7 @@ Delphi10S=Y
 FPC=Y
 
 [PrimaryLangID]
-Desc="Extracts and returns a primary language identifier from the given language identifier."
+DescEx="<p>Extracts and returns a primary language identifier from the given language identifier.</p>"
 Extra="<p>Emulates the Windows <var>PRIMARYLANGID</var> macro.</p>"
 SeeAlso=MakeLangID,MakeLCID,SubLangID
 Snip=169.dat
@@ -692,7 +692,7 @@ Delphi10S=Y
 FPC=N
 
 [SortIDFromLCID]
-Desc="Extracts and returns a sort order identifier from the given locale identifier."
+DescEx="<p>Extracts and returns a sort order identifier from the given locale identifier.</p>"
 Extra="<p>Emulates the Windows <var>SORTIDFROMLCID</var> macro.</p>"
 Units=Windows
 SeeAlso=LangIDFromLCID,MakeLCID
@@ -716,7 +716,7 @@ Delphi10S=Y
 FPC=Y
 
 [SubLangID]
-Desc="Extracts and returns a sublanguage identifier from the given language identifier."
+DescEx="<p>Extracts and returns a sublanguage identifier from the given language identifier.</p>"
 Extra="<p>Emulates the Windows <var>SUBLANGID</var> macro.</p>"
 SeeAlso=MakeLangID,MakeLCID,PrimaryLangID
 Snip=170.dat
