--- a/csdb/collection/winsys.ini
+++ b/csdb/collection/winsys.ini
@@ -6,7 +6,7 @@
 # https://gravatar.com/delphidabbler
 
 [CommonFilesFolder]
-Desc="Returns the Windows common files directory."
+DescEx="<p>Returns the Windows common files directory.</p>"
 Depends=GetCurrentVersionRegStr
 SeeAlso=ProgramFilesFolder,SystemFolder,TempFolder,WindowsFolder,GetDesktopFolder
 Snip=040.dat
@@ -29,7 +29,7 @@ Delphi10S=Y
 FPC=Y
 
 [ComputerName]
-Desc="Returns the name of the host computer."
+DescEx="<p>Returns the name of the host computer.</p>"
 Units=Windows
 SeeAlso=UserName
 Snip=129.dat
@@ -75,7 +75,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsMediaCenterOS]
-Desc="Checks if the host operating system includes Windows Media Center."
+DescEx="<p>Checks if the host operating system includes Windows Media Center.</p>"
 Units=Windows
 SeeAlso=IsTabletOS,IsWinNT,IsWin9x,IsWow64,IsVista,IsWindows7
 Snip=092.dat
@@ -98,7 +98,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsTabletOS]
-Desc="Checks if the host operating system is a Windows Tablet edition."
+DescEx="<p>Checks if the host operating system is a Windows Tablet edition.</p>"
 Units=Windows
 SeeAlso=IsMediaCenterOS,IsWinNT,IsWin9x,IsWow64,IsVista,IsWindows7
 Snip=093.dat
@@ -121,9 +121,8 @@ Delphi10S=Y
 FPC=Y
 
 [IsVista]
-Desc="Checks if the host operating system is Windows Vista or later."
-Extra="<p>Contributed by Laurent Pierre.</p>"
-Extra="<p>Works correctly even if the application has defined a Windows XP (or other) compatibility mode.</p>"
+DescEx="<p>Checks if the host operating system is Windows Vista or later.</p>"
+Extra="<p>Works correctly even if the application has defined a Windows XP (or other) compatibility mode.</p><p>Contributed by Laurent Pierre.</p>"
 Units=Windows
 SeeAlso=IsWin9x,IsWinNT,IsWow64,IsTabletOS,IsMediaCenterOS,IsWindows7
 Snip=151.dat
@@ -146,7 +145,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsWin9x]
-Desc="Checks if the host operating system is on the Windows 9x platform."
+DescEx="<p>Checks if the host operating system is on the Windows 9x platform.</p>"
 Units=SysUtils,Windows
 SeeAlso=IsWinNT,IsWow64,IsVista,IsWindows7,IsTabletOS,IsMediaCenterOS
 Snip=091.dat
@@ -169,7 +168,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsWindows7]
-Desc="Checks if the host operating system is Windows 7 (or Windows Server 2008 R2) or later."
+DescEx="<p>Checks if the host operating system is Windows 7 (or Windows Server 2008 R2) or later.</p>"
 Extra="<p>Works correctly even if the application has defined a Windows Vista (or other) compatibility mode.</p>"
 Units=Windows
 SeeAlso=IsWin9x,IsWinNT,IsWow64,IsTabletOS,IsMediaCenterOS,IsVista
@@ -193,7 +192,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsWinNT]
-Desc="Checks if the host operating system is on the Windows NT platform."
+DescEx="<p>Checks if the host operating system is on the Windows NT platform.</p>"
 Units=SysUtils,Windows
 SeeAlso=IsVista,IsWindows7,IsWin9x,IsWow64,IsTabletOS,IsMediaCenterOS
 Snip=065.dat
@@ -216,7 +215,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsWow64]
-Desc="Checks if the current process is executing as a 32 bit process under WOW64 on 64 bit Windows."
+DescEx="<p>Checks if the current process is executing as a 32 bit process under WOW64 on 64 bit Windows.</p>"
 Units=SysUtils,Windows
 SeeAlso=IsWin9x,IsWinNT,IsVista,IsWindows7,IsTabletOS,IsMediaCenterOS
 Snip=085.dat
@@ -239,7 +238,7 @@ Delphi10S=Y
 FPC=Y
 
 [ProgramFilesFolder]
-Desc="Returns the Windows program files directory."
+DescEx="<p>Returns the Windows program files directory.</p>"
 Depends=GetCurrentVersionRegStr
 SeeAlso=CommonFilesFolder,SystemFolder,TempFolder,WindowsFolder,GetDesktopFolder
 Snip=039.dat
@@ -284,7 +283,7 @@ Delphi10S=Y
 FPC=Y
 
 [SystemFolder]
-Desc="Returns the Windows system directory."
+DescEx="<p>Returns the Windows system directory.</p>"
 Units=Windows
 SeeAlso=CommonFilesFolder,ProgramFilesFolder,TempFolder,WindowsFolder,GetDesktopFolder
 Snip=042.dat
@@ -307,7 +306,7 @@ Delphi10S=Y
 FPC=Y
 
 [TempFolder]
-Desc="Returns the Windows temporary directory."
+DescEx="<p>Returns the Windows temporary directory.</p>"
 Units=Windows
 SeeAlso=CommonFilesFolder,ProgramFilesFolder,SystemFolder,TempFileName,WindowsFolder,TempFolder
 Snip=043.dat
@@ -330,7 +329,7 @@ Delphi10S=Y
 FPC=Y
 
 [UserName]
-Desc="Returns the name of the current user."
+DescEx="<p>Returns the name of the current user.</p>"
 Units=Windows
 SeeAlso=ComputerName
 Snip=130.dat
@@ -353,7 +352,7 @@ Delphi10S=Y
 FPC=Y
 
 [WindowsFolder]
-Desc="Returns the Windows directory."
+DescEx="<p>Returns the Windows directory.</p>"
 Units=Windows
 SeeAlso=CommonFilesFolder,ProgramFilesFolder,SystemFolder,TempFolder,WindowsFolder
 Snip=041.dat
@@ -376,7 +375,7 @@ Delphi10S=Y
 FPC=Y
 
 [WindowsProductID]
-Desc="Returns the Windows product ID."
+DescEx="<p>Returns the Windows product ID.</p>"
 Units=Windows
 Depends=GetRegistryString,IsWinNT
 Snip=071.dat
@@ -399,7 +398,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsRemoteSession]
-Desc="Checks if the program is running under Windows Terminal Server in a remote client session."
+DescEx="<p>Checks if the program is running under Windows Terminal Server in a remote client session.</p>"
 Extra="<p><strong>Note:</strong> This function requires Windows NT4 SP4 or later. It does not work on the Windows 9x platform.</p>"
 Units=Windows
 Snip=302.dat
