--- a/csdb/collection/encoding.ini
+++ b/csdb/collection/encoding.ini
@@ -76,7 +76,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsASCIIChar]
-Desc="Checks if the given character is a valid ASCII character."
+DescEx="<p>Checks if the given character is a valid ASCII character.</p>"
 SeeAlso=IsASCIIDigit,IsASCIIFile,IsASCIIStream,IsASCIIText
 Snip=531.dat
 Delphi2=Y
@@ -98,7 +98,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsASCIIDigit]
-Desc="Checks if the given character is a digit in the ASCII character set."
+DescEx="<p>Checks if the given character is a digit in the ASCII character set.</p>"
 SeeAlso=IsASCIIChar,IsASCIIFile,IsASCIIStream,IsASCIIText
 Snip=532.dat
 Delphi2=Y
@@ -120,7 +120,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsASCIIText]
-Desc="Checks if the given string contains only valid ASCII characters. Returns True if so or False otherwise."
+DescEx="<p>Checks if the given string contains only valid ASCII characters. Returns True if so or False otherwise.</p>"
 Units=SysUtils
 Depends=EncodingSupportsString
 SeeAlso=EncodingSupportsString,IsASCIIChar,IsASCIIDigit,IsASCIIFile,IsASCIIStream
@@ -144,7 +144,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsUTF16BEFile]
-Desc="Checks if the given file is a UTF-16 big-endian encoded text file by examining the byte order mark at the start of the file."
+DescEx="<p>Checks if the given file is a UTF-16 big-endian encoded text file by examining the byte order mark at the start of the file.</p>"
 Units=SysUtils,Classes
 Depends=IsUTF16BEStream
 SeeAlso=IsASCIIFile,IsUTF16File,IsUTF16LEFile,IsUTF7File,IsUTF8File,IsUTF16BEStream
@@ -215,7 +215,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsUTF16LEFile]
-Desc="Checks if the given file is a UTF-16 little-endian encoded text file by examining the byte order mark at the start of the file."
+DescEx="<p>Checks if the given file is a UTF-16 little-endian encoded text file by examining the byte order mark at the start of the file.</p>"
 Units=SysUtils,Classes
 Depends=IsUTF16LEStream
 SeeAlso=IsASCIIFile,IsUTF16BEFile,IsUTF16File,IsUTF7File,IsUTF8File,IsUTF16LEStream
@@ -285,7 +285,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsUTF8File]
-Desc="Checks if the given file is a UTF-8 encoded text file by examining the byte order mark at the start of the file."
+DescEx="<p>Checks if the given file is a UTF-8 encoded text file by examining the byte order mark at the start of the file.</p>"
 Units=SysUtils,Classes
 Depends=IsUTF8Stream
 SeeAlso=IsASCIIFile,IsUTF16BEFile,IsUTF16File,IsUTF16LEFile,IsUTF7File,IsUTF8Stream
@@ -382,7 +382,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsUnicodeFile]
-Desc="Checks if a file contains Unicode UTF16 little endian encoded text."
+DescEx="<p>Checks if a file contains Unicode UTF16 little endian encoded text.</p>"
 Extra="<p>It is assumed that Unicode files begin with the correct byte order mark for UTF16 little endian encoding.</p><p><strong>Note:</strong> This function only works with files up to 2Gb. <var>IsUTF16LEFile</var>, which supports files larger than 2Gb, should be used in preference.</p>"
 Units=Classes,SysUtils
 Depends=IsUnicodeStream
@@ -407,7 +407,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsUnicodeStream]
-Desc="Checks if a stream contains Unicode UTF16 little endian encoded text at the current position."
+DescEx="<p>Checks if a stream contains Unicode UTF16 little endian encoded text at the current position.</p>"
 Extra="<p>It is assumed Unicode streams have the correct byte order mark for UTF16 little endian located at the current stream position.</p><p><strong>Note:</strong> This function only works with streams up to 2Gb. <var>IsUTF16LEStream</var>, which supports streams larger than 2Gb, should be used in preference.</p>"
 Units=Classes
 SeeAlso=IsUnicodeFile,IsASCIIStream,IsUTF16BEStream,IsUTF16LEStream,IsUTF16Stream,IsUTF7Stream,IsUTF8Stream
@@ -431,7 +431,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsUTF7File]
-Desc="Checks if the given file is a UTF-7 encoded text file by examining the byte order mark at the start of the file."
+DescEx="<p>Checks if the given file is a UTF-7 encoded text file by examining the byte order mark at the start of the file.</p>"
 Extra="<p>Since UTF-7 uses only ASCII characters you may also want to confirm that the file is valid ASCII as well a having the correct byte order mark. You can use the <var>IsASCIIFile</var> snippet to check for valid ASCII.</p>"
 Units=SysUtils,Classes
 Depends=IsUTF7Stream
