--- a/csdb/collection/maths.ini
+++ b/csdb/collection/maths.ini
@@ -6,7 +6,7 @@
 # https://gravatar.com/delphidabbler
 
 [AllDigitsDifferent]
-Desc="Checks if all the digits of the given integer are different to each other."
+DescEx="<p>Checks if all the digits of the given integer are different to each other.</p>"
 Extra="<p>An example of an integer with all digits different is 15862.</p>"
 SeeAlso=AllDigitsSame
 Snip=498.dat
@@ -29,7 +29,7 @@ Delphi10S=Y
 FPC=Y
 
 [AllDigitsSame]
-Desc="Checks if all the digits of the given integer are the same."
+DescEx="<p>Checks if all the digits of the given integer are the same.</p>"
 Extra="<p>An example of an integer with all digits the same is 777777.</p>"
 SeeAlso=AllDigitsDifferent,RepeatedDigits
 Snip=499.dat
@@ -52,7 +52,7 @@ Delphi10S=Y
 FPC=Y
 
 [DigitCount]
-Desc="Counts the number of digits in the given integer."
+DescEx="<p>Counts the number of digits in the given integer.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=DigitCount2,DigitCountR
 TestInfo=advanced
@@ -76,7 +76,7 @@ Delphi10S=Y
 FPC=Y
 
 [DigitCount2]
-Desc="Counts the number of digits in the given integer."
+DescEx="<p>Counts the number of digits in the given integer.</p>"
 Extra="<p>Based on code suggested by Don Rowlett.</p>"
 Units=Math
 SeeAlso=DigitCount,DigitCountR
@@ -101,7 +101,7 @@ Delphi10S=Y
 FPC=Y
 
 [DigitCountR]
-Desc="Counts the number of digits in the given integer using recursion."
+DescEx="<p>Counts the number of digits in the given integer using recursion.</p>"
 Extra="<p>Contributed by Rubem Nascimento da Rocha.</p>"
 SeeAlso=DigitCount,DigitCount2
 TestInfo=advanced
@@ -125,7 +125,7 @@ Delphi10S=Y
 FPC=Y
 
 [Factorial]
-Desc="Calculates the factorial of the given number."
+DescEx="<p>Calculates the factorial of the given number.</p>"
 Extra="<p>Adapted from code contributed by Don Rowlett.</p>"
 Snip=231.dat
 Delphi2=N
@@ -217,8 +217,8 @@ Delphi10S=Y
 FPC=Y
 
 [RectArea]
-Desc="Returns the area of the given rectangle."
-Commants="Adopts the convention that the rectangle's bottom and right are not included in it, so that width = right - left and height = bottom - top."
+DescEx="<p>Returns the area of the given rectangle.</p>"
+Extra="<p>Adopts the convention that the rectangle's bottom and right are not included in it, so that width = right - left and height = bottom - top.</p>"
 SeeAlso=RectHeight,RectSize,RectWidth
 Units=Windows
 Snip=496.dat
@@ -315,7 +315,7 @@ Delphi10S=Y
 FPC=Y
 
 [RepeatedDigits]
-Desc="Checks if the given integer contains only a single repeated digit."
+DescEx="<p>Checks if the given integer contains only a single repeated digit.</p>"
 Extra="<p>An example of an integer with a single repeated digit is 5555.</p><p>Slightly modified from code contributed by Rubem Rocha.</p>"
 Units=SysUtils,Math
 SeeAlso=AllDigitsSame
@@ -362,7 +362,7 @@ Delphi10S=Y
 FPC=Y
 
 [SignOfFloat]
-Desc="Returns the sign of the given floating point value. Returns -1 if the value is positive, 0 if zero or +1 if negative."
+DescEx="<p>Returns the sign of the given floating point value. Returns -1 if the value is positive, 0 if zero or +1 if negative.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=SignOfInt
 Snip=205.dat
@@ -385,7 +385,7 @@ Delphi10S=Y
 FPC=Y
 
 [SignOfInt]
-Desc="Returns the sign of the given integer. Returns -1 if the integer is positive, 0 if zero or +1 if negative."
+DescEx="<p>Returns the sign of the given integer. Returns -1 if the integer is positive, 0 if zero or +1 if negative.</p>"
 Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=SignOfFloat
 Snip=206.dat
@@ -431,7 +431,7 @@ Delphi10S=Y
 FPC=Y
 
 [DigitSum]
-Desc="Returns the sum of the digits from the given integer, using recursion."
+DescEx="<p>Returns the sum of the digits from the given integer, using recursion.</p>"
 Extra="<p>Sums of digits of negative numbers are negative, for example <mono>DigitSum(-42)=-6</mono>.</p><p>Contributed Rubem Nascimento da Rocha.</p>"
 TestInfo=advanced
 Snip=418.dat
@@ -455,7 +455,7 @@ FPC=Y
 
 [DistanceBetweenPoints_Float]
 DisplayName="DistanceBetweenPoints (TPointF overload)"
-Desc="Calculates the distance between two given points with double precision floating point valued coordinates."
+DescEx="<p>Calculates the distance between two given points with double precision floating point valued coordinates.</p>"
 Depends=TPointF
 SeeAlso=DistanceBetweenPoints_Int
 Units=Math
@@ -480,7 +480,7 @@ FPC=Y
 
 [DistanceBetweenPoints_Int]
 DisplayName="DistanceBetweenPoints (TPoint overload)"
-Desc="Calculates the distance between two points with integer valued co-ordinates."
+DescEx="<p>Calculates the distance between two points with integer valued co-ordinates.</p>"
 SeeAlso=DistanceBetweenPoints_Float
 Units=Math,Types
 Snip=494.dat
@@ -503,7 +503,7 @@ Delphi10S=Y
 FPC=Y
 
 [GCD]
-Desc="Determines the greatest common divisor of two given non-zero integers."
+DescEx="<p>Determines the greatest common divisor of two given non-zero integers.</p>"
 Extra="<p>Uses Euclid's method.</p><p>Note that <mono>GCD(a,b) = GCD(|a|,b) = GCD(a,|b|) = GCD(|a|,|b|)</mono>, which implies that <mono>GCD(a,b)</mono> is always positive.</p><p>Modified from code by Hans van Kruijssen.</p>"
 SeeAlso=GCD2,LCD
 TestInfo=advanced
@@ -527,7 +527,7 @@ Delphi10S=Y
 FPC=Y
 
 [GCD2]
-Desc="Determines the greatest common divisor of two given non-zero integers."
+DescEx="<p>Determines the greatest common divisor of two given non-zero integers.</p>"
 Extra="<p>Uses a recursive implementation of Euclid's method.</p><p>Note that <mono>GCD2(a,b) = GCD2(|a|,b) = GCD2(a,|b|) = GCD2(|a|,|b|)</mono>, which implies that <mono>GCD2(a,b)</mono> is always positive.</p><p>Modified from code by Hans van Kruijssen.</p>"
 SeeAlso=GCD,LCD
 TestInfo=advanced
@@ -551,7 +551,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsPrime]
-Desc="Checks if the given number is prime."
+DescEx="<p>Checks if the given number is prime.</p>"
 Extra="<p>On versions of Delphi that support <var>Int64</var> parameters to the <var>Sqrt</var> function, the type of <var>N</var>, <var>Max</var> &amp; <var>Divisor</var> can be changed to <var>Int64</var>.</p> <p>Adapted from code contributed by Don Rowlett.</p>"
 SeeAlso=IsPrime2
 TestInfo=advanced
@@ -575,7 +575,7 @@ Delphi10S=Y
 FPC=Y
 
 [IsPrime2]
-Desc="Checks if the given number is prime."
+DescEx="<p>Checks if the given number is prime.</p>"
 Extra="<p>Uses less code than <var>IsPrime</var> and does not require any floating point operations.</p><p>Contributed by daniel.</p>"
 SeeAlso=IsPrime
 TestInfo=advanced
@@ -595,7 +595,7 @@ Delphi10S=Y
 FPC=Y
 
 [LCD]
-Desc="Returns the least common divisor of two given non-zero integers."
+DescEx="<p>Returns the least common divisor of two given non-zero integers.</p>"
 Extra="<p>Note that <mono>LCD(a,b) = LCD(|a|,b) = LCD(a,|b|) = LCD(|a|,|b|)</mono>, which implies that <mono>LCD(a,b)</mono> is always positive.</p><p>Modified from code by Hans van Kruijssen.</p>"
 Depends=GCD
 SeeAlso=GCD,GCD2
@@ -741,7 +741,7 @@ FPC=Y
 
 [Mid_Double]
 DisplayName="Mid (Double overload)"
-Desc="Returns the middle of three double precision floating point values."
+DescEx="<p>Returns the middle of three double precision floating point values.</p>"
 Units=Math
 SeeAlso=Mid_Extended,Mid_Int64,Mid_Integer,Mid_Single,MaxOfArray_Double,MinOfArray_Double,MinMidMax_Double
 TestInfo=advanced
@@ -766,7 +766,7 @@ FPC=Y
 
 [Mid_Extended]
 DisplayName="Mid (Extended overload)"
-Desc="Returns the middle of three extended precision floating point values."
+DescEx="<p>Returns the middle of three extended precision floating point values.</p>"
 Extra="<p>Adapted from code from Bill Miller's snippets collection.</p>"
 Units=Math
 SeeAlso=Mid_Double,Mid_Int64,Mid_Integer,Mid_Single,MaxOfArray_Extended,MinOfArray_Extended,MinMidMax_Extended
@@ -792,7 +792,7 @@ FPC=Y
 
 [Mid_Int64]
 DisplayName="Mid (Int64 overload)"
-Desc="Returns the middle of three 64 bit integer values."
+DescEx="<p>Returns the middle of three 64 bit integer values.</p>"
 Units=Math
 SeeAlso=Mid_Double,Mid_Extended,Mid_Integer,Mid_Single,MaxOfArray_Int64,MinOfArray_Int64,MinMidMax_Int64
 TestInfo=advanced
@@ -817,7 +817,7 @@ FPC=Y
 
 [Mid_Integer]
 DisplayName="Mid (Integer overload)"
-Desc="Returns the middle of three integer values."
+DescEx="<p>Returns the middle of three integer values.</p>"
 Extra="<p>Adapted from code from Bill Miller's snippets collection.</p>"
 Units=Math
 SeeAlso=Mid_Double,Mid_Extended,Mid_Int64,Mid_Single,MaxOfArray_Integer,MinOfArray_Integer,MinMidMax_Integer
@@ -843,7 +843,7 @@ FPC=Y
 
 [Mid_Single]
 DisplayName="Mid (Single overload)"
-Desc="Returns the middle of three single precision floating point values."
+DescEx="<p>Returns the middle of three single precision floating point values.</p>"
 Units=Math
 SeeAlso=Mid_Double,Mid_Extended,Mid_Int64,Mid_Integer,MaxOfArray_Single,MinOfArray_Single,MinMidMax_Single
 TestInfo=advanced
@@ -1242,7 +1242,7 @@ Delphi10S=Y
 FPC=Y
 
 [ScaleRect]
-Desc="Scales the given rectangle by the given scale factor and returns the scaled rectangle."
+DescEx="<p>Scales the given rectangle by the given scale factor and returns the scaled rectangle.</p>"
 Extra="<p>Slightly modified from code contributed by Montor.</p>"
 Units=Types
 SeeAlso=ZoomRatio_A,ZoomRatio_B,ZoomRatio_C,StretchRect_A,StretchRect_B,ResizeRect_A,ResizeRect_B
