--- a/csdb/collection/structs.ini
+++ b/csdb/collection/structs.ini
@@ -119,7 +119,7 @@ FPC=Y
 
 [TPointF]
 Kind=type
-Desc="Encapsulates a point with double precision floating point coordinates."
+DescEx="<p>Encapsulates a point with double precision floating point coordinates.</p>"
 SeeAlso=PointF,TRectF
 Snip=489.dat
 Delphi2=Y
@@ -142,7 +142,7 @@ FPC=Y
 
 [TRange]
 Kind=type
-Desc="Encapsulates the upper and lower bounds of a range of values."
+DescEx="<p>Encapsulates the upper and lower bounds of a range of values.</p>"
 SeeAlso=Range
 SeeAlso=Range,TRangeEx
 Snip=579.dat
@@ -161,7 +161,7 @@ FPC=Y
 
 [TRectF]
 Kind=type
-Desc="Encapsulates a rectangle with double precision floating point size and position."
+DescEx="<p>Encapsulates a rectangle with double precision floating point size and position.</p>"
 SeeAlso=RectF,BoundsF,TPointF
 Depends=TPointF
 Snip=490.dat
@@ -185,7 +185,7 @@ FPC=Y
 
 [TRangeEx]
 Kind=class
-Desc="Encapsulates a range of integers with a methods to test whether a value falls within the range and to adjust the value to fit."
+DescEx="<p>Encapsulates a range of integers with a methods to test whether a value falls within the range and to adjust the value to fit.</p>"
 Units=Math
 SeeAlso=Range,TRange
 Snip=578.dat
